同步于: 11月29日1时3分

--- a/pages/nf4514/n12581514.md
+++ b/pages/nf4514/n12581514.md
@@ -5,7 +5,7 @@
 
 
 
-<div><img alt="【大选更新11.28】宾州凭空冒出逾110万票" class="attachment-djy_600_400 size-djy_600_400 wp-post-image" src="https://i.epochtimes.com/assets/uploads/2020/11/Getty-Mail-In-Ballot-600x400.jpg"/>
+<div><img alt="【大选更新11.28】新诉讼拟阻威州认证选举结果" class="attachment-djy_600_400 size-djy_600_400 wp-post-image" src="https://i.epochtimes.com/assets/uploads/2020/11/GettyImages-1286592721-600x400.jpg"/>
 <div class="caption">
  2020年10月20日，美国大选，马里兰州蒙哥马利县选举委员会Plumb Gar社区娱乐中心里，等待扫描的早期邮寄选票。(Alex Wong/Getty Images)
 </div></div><hr/>
