--- a/pages/nsc412/n12581514.md
+++ b/pages/nsc412/n12581514.md
@@ -49,6 +49,21 @@
  以下是美国大选情况的实时更新：
 </h4>
 <h3>
+ Voter GA联合创始人：为何乔州审计未发现问题
+</h3>
+<p>
+ 乔治亚州现在所做的重新计票只是对选票重新扫描。因此，这意味着如果计票中有任何非法选票，或者多米尼投票系统（Dominion）有任何错误，都不会被发现。
+</p>
+<p>
+ 机器有任何问题都应该在该州首次手动审核中被发现，但是提供给选举委员会的指示使得任何潜在的违规行为都无法被检测到。
+</p>
+<p>
+ Voter GA联合创始人加兰·费沃里托（Garland Favorito）说：“这是另一个问题，州务卿不仅是收集了他们的数字，而且如果他们的手动计票相差不到百分之五，他命令各县对现有电子计票总数进行认证。”
+</p>
+<p>
+ 由于许多县仍在通过多米尼投票机器提交结果，他说，第一次手动审核并未发现要发现的问题。
+</p>
+<h3>
  联邦选举委员会主席：需对选举指控进行调查
 </h3>
 <p>
