--- a/pages/p4/954103.md
+++ b/pages/p4/954103.md
@@ -1,4 +1,4 @@
-### 见证中共邪恶政权各种谎言 宋庆龄悔不当初(图)
+### 战俘的天地(图)
 ------------------------
 
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;&nbsp;|&nbsp;&nbsp; [法轮功真相](https://github.com/begood0513/basic/blob/master/README.md)  &nbsp;&nbsp;|&nbsp;&nbsp; [手把手翻墙教程](https://github.com/gfw-breaker/guides/wiki)  &nbsp;&nbsp;|&nbsp;&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md)  
@@ -6,10 +6,10 @@
 
 
 <div class="article_right" style="fone-color:#000">
- <p style="text-align:center">
-  <img alt="宋庆龄与毛泽东和邓小平在苏联莫斯科。" src="https://img3.secretchina.com/pic/2020/11-18/p2820632a427062478-ss.jpg"/>
+ <p style="text-align: center;">
+  <img alt="台湾" src="https://img3.secretchina.com/pic/2020/11-28/p2827721a896662243-ss.jpg" style="height:400px; width:600px"/>
   <br>
-   见证中共独裁政权各种谎言，宋庆龄悔不当初。图为宋庆龄与毛泽东和邓小平在苏联莫斯科。（图片来源：公有领域）
+   7月27日，成都美领馆外的警察（图片来源：NOEL CELIS/AFP via Getty Images）
    <span id="hideid" name="hideid" style="color:red;display:none;">
     <span href="https://www.secretchina.com">
     </span>
@@ -29,46 +29,36 @@
   </div>
  </div>
  <p>
-  1949年，
-  <span href="https://www.secretchina.com/news/gb/tag/蒋介石" target="_blank">
-   蒋介石
-  </span>
-  和宋家姐妹轮番劝
+  【看中国2020年11月29日讯】去时雄赳赳，回时灰溜溜。1954年1月，张泽石“抗美援朝”回国。因为是“
   <strong>
-   宋庆龄
+   <span href="https://www.secretchina.com/news/gb/tag/战俘" target="_blank">
+    战俘
+   </span>
   </strong>
-  离开大陆，宋拒绝了，留下了与推翻丈夫政权的人合作，匪夷所思，除了开始那几年的尊重，宋更多的是被冷落，被当做政治花瓶点缀，宋见证了这个独裁政权的各种谎言与荒诞，心中的苦闷是不能言说的。1994年11月，
-  <strong>
-   中共
-  </strong>
-  书记处审查通过了党史编委会整理的关于宋庆龄1949年后32年经历的材料。
+  ”，所以成叛徒。他被开除出党。
   <span id="hideid" name="hideid" style="color:red;display:none;">
    <span href="https://www.secretchina.com">
    </span>
   </span>
  </p>
  <p>
-  这份材料的内容提要如下：
+  1979年6月，张泽石给第五届全国人大提案委员会写信：“没想到当年敌人的欺骗宣传‘你们回大陆去，只会挨整挨斗，一辈子也不得翻身’竟成了我们六千多人的悲惨现实”。
  </p>
  <p>
-  1955年11月，宋给毛写信：“我很不理解提出对工商业的改造，
-  <span href="https://www.secretchina.com/news/gb/tag/共产党" target="_blank">
-   共产党
+  2011年，他出版了《我的朝鲜战争》一书。在前言中他这样追问：朝鲜战争难以忘却，还因为那场战争有那么多疑问一直困惑着我：谁是发动战争的真正罪魁祸首？
+ </p>
+ <p>
+  这部30万字的回忆录中，他反思自己这段经历。同时还采访了很多当年去
+  <span href="https://www.secretchina.com/news/gb/tag/台湾" target="_blank">
+   台湾
   </span>
-  曾向工商界许下长期共存、保护工商业者利益的诺言。这样一来，不是变成自食其言了吗？资本家已经对共产党的政策产生了怀疑和恐惧，不少人后悔和抱怨。”毛批示：“宋副委员长有意见，要代表资本家讲话。”
+  的战俘，两方的命运对比，让他感慨。
  </p>
  <p>
-  1957年宋又
-  <span href="https://www.secretchina.com/news/gb/tag/写信" target="_blank">
-   写信
-  </span>
-  给党中央：“党中央号召大鸣大放，怎么又收了？共产党不怕国民党八百万大军，不怕美帝国主义，怎么会担心人民推翻党的领导和人民政府？共产党要敢于接受各界人士的批评，批评人士大多是爱国、爱党的，一些民主党派人士为新中国的解放，作出了家庭、个人名利的牺牲，一些二、三十岁的青年知识分 子怎么可能一天就变成反党反社会主义分子？我很不理解这个运动，我想了两个多月，还是想不通，有这么多党内党外纯粹的人会站在共产党和人民政府的对立面？要推翻共产党？”
+  成都籍被俘老兵李正文、李正华两兄弟因为无法忍受批斗的兄弟俩躲进岷江原始森林，多年过着野人的生活。1982年，当地的两位干部想请李正文写自传，要求李正文去武装部一趟，吓得李正文当夜悬梁自尽。
  </p>
  <p>
-  从1958年起，宋曾推病拒绝参加人大常委会。党中央委派刘少奇、周恩来、董必武去做工作，宋只得继续参加。1959年4月，宋在人大被推举为国家副主席。宋先后两次推辞：“我是落伍了，思想跟不上，才挂个名，作个样子，对国家不利。”提议由李富春或乌兰夫担任。
- </p>
- <p>
-  宋任国家副主席，是刘少奇、董必武、林伯渠、李富春提议的，政治局讨论时，21人中18人赞成，3人反对，反对者是：毛、林彪、康生。当时毛发言：“宋是我们民主革命时期的同路人，在社会主义革命时期，她和我们就走不到一起了。从不赞成我们的方针路线到反对我们的方针路线。我们同她是不同的阶级。”
+  被俘老兵丁先文，被定为投敌叛国分子，开除公职。他为此先后4次坐牢，狱中度过14年，出狱后又被管制6年……
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -83,7 +73,7 @@
   </div>
  </center>
  <p>
-  文革期间，宋先后给毛和党中央写了七封信，表达了她对“文革”的不理解、反感，并对共产党极度失望。1967年8月、1969年11月、1976年6月，宋曾三次产生厌世思想，在信中以及对来探望她的领导人的谈话中流露出对自己所选择的道路感到怅惘和说不出的苦闷。
+  当年志愿军战俘总代表孙振冠在回忆录中写道：“难道我们坚决不去台湾，选择回国，就是落得个这样的下场？”
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -98,7 +88,11 @@
   </div>
  </center>
  <p>
-  七封信中说：“我不懂文化，说小说都是政治，而且都是毒草，我糊涂了，一夜天下来，一些和我一起工作的同事都变成了走资派、反党集团、野心家、牛鬼蛇神。中央要我学习批判揭发刘少奇，我不会作的，刘少奇主席在党中央工作了三、四十年，今天会是叛徒、内奸！我不相信，一个叛徒内奸当了七年的国家主席，现在宪法还有效吗？怎么可以乱抓人、乱斗人、逼死人？党中央要出来讲话。这种无法无天的情况，自己伤害自己的同志、人民，是罪行。我们的优秀干部从与国民党的战斗中走过来，却死在自己的队伍中，这是什么原因？”
+  到了1979年，风向突变，要改革开放了。过去的国民党反动派现在都成了香饽饽，当年去
+  <strong>
+   台湾
+  </strong>
+  的战俘身价陡增。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -113,7 +107,7 @@
   </div>
  </center>
  <p>
-  1970年3月，毛对周恩来说：“她不愿意看到今天的变化，可以到海峡对岸，可以去香港、去外国，我不挽留。”并指示周恩来、李先念把他的话传达给宋。传达时他们说：“主席很关心你，知道你的心情不怎么好，建议你到外面散散心，休息休息。”宋说：“是否嫌我还在？我的一生还是要在这块土地上，走完最后几步。”于是宋推病拒绝出席一些节日活动和招待会，说：“我参加会伤感，还是不参加，参加一次，回来就要进医院。另外，我也不想做政治上的点缀。”
+  话说李某，当年遣返战俘时去了台湾。1979年，他来到故乡四川宜宾投资建厂，那个时候，台胞来建厂可是个大事，县委书记和县长都要远接近迎。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -128,7 +122,7 @@
   </div>
  </center>
  <p>
-  1980年11月，宋给党中央写了她一生中最后的一封信：“一、国家要振兴，恢复元气，这是一次大好时机。二、要总结建国以来政治运动对国家对人民造成的创伤。三、请不要把我和国父放在一起，我不够格的。”
+  故乡情深，一别多年。这里还有他当年出生入死的战友。只是战俘营分别后海峡相隔再无音信。在县委招待所举行欢迎宴会的前几天，李某特意提出要把当年的战友请来欢聚。这个要求书记当然要照办。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -142,6 +136,37 @@
    </center>
   </div>
  </center>
+ <p>
+  宴会那天，三个还健在的战友应约前来。无奈经历了多年的折磨以及农民的贫穷，他们的身份与大雅之堂早已是格格不入。县委秘书不明就里，闹了小小的误会才上得厅来。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  酒至三巡，县委书记各桌敬酒。轮到三位战友桌前，书记端着酒杯，借着酒劲说：“废物，你们都是…废物，当年你们为什么不去…台湾？”
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ (文章仅代表作者个人立场和观点)
  <p style="margin-bottom:12px;">
   <hr style="border-top: 1px dashed  ;" width="100%"/>
   <br/>
@@ -192,13 +217,13 @@
 
 <hr/>
 手机上长按并复制下列链接或二维码分享本文章：<br/>
-https://github.com/gfw-breaker/banned-news3/blob/master/pages/p6/904686.md <br/>
-<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p6/904686.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p6/904686.md.png'/></a> <br/>
-原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/11/26/904686.html
+https://github.com/gfw-breaker/banned-news3/blob/master/pages/p4/954103.md <br/>
+<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p4/954103.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p4/954103.md.png'/></a> <br/>
+原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/11/29/954103.html
 
 
 ------------------------
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;|&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md) &nbsp;| [《九评共产党》](https://github.com/gfw-breaker/9ping.md/blob/master/README.md#九评之一评共产党是什么) | [《解体党文化》](https://github.com/gfw-breaker/jtdwh.md/blob/master/README.md) | [《共产主义的终极目的》](https://github.com/gfw-breaker/gczydzjmd.md/blob/master/README.md)
 
 
-<img src='http://gfw-breaker.win/banned-news3/pages/p6/904686.md' width='0px' height='0px'/>
+<img src='http://gfw-breaker.win/banned-news3/pages/p4/954103.md' width='0px' height='0px'/>
