--- a/pages/p2/954073.md
+++ b/pages/p2/954073.md
@@ -1,4 +1,4 @@
-### 夏日消暑圣品－绿豆汤(组图)
+### 爆笑：习亲信查贪秘法 查官员坐过的椅子(图)
 ------------------------
 
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;&nbsp;|&nbsp;&nbsp; [法轮功真相](https://github.com/begood0513/basic/blob/master/README.md)  &nbsp;&nbsp;|&nbsp;&nbsp; [手把手翻墙教程](https://github.com/gfw-breaker/guides/wiki)  &nbsp;&nbsp;|&nbsp;&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md)  
@@ -7,9 +7,13 @@
 
 <div class="article_right" style="fone-color:#000">
  <p style="text-align:center">
-  <img alt="一早就煮了一锅绿豆汤，先盛一碗准备再加其他的料。" src="https://img3.secretchina.com/pic/2020/7-25/p2740171a27361715-ss.jpg"/>
+  <img alt="政治段子称，查贪要检查与会者坐过的椅子，凡留下尿迹者都在劫难逃。" src="https://img2.secretchina.com/pic/2018/6-5/p2184512a647294069-ss.jpg" style="height:337px; width:600px"/>
   <br>
-   一早就煮了一锅绿豆汤，先盛一碗准备再加其他的料。（摄影：心如）
+   政治段子称，查贪要检查与会者坐过的
+   <strong>
+    椅子
+   </strong>
+   ，凡留下尿迹者都在劫难逃。（图片来源: Getty Images）
    <span id="hideid" name="hideid" style="color:red;display:none;">
     <span href="https://www.secretchina.com">
     </span>
@@ -21,133 +25,63 @@
 
 ---
 
-#### 💥 [《伪火》 - 天安门自焚真相 ](http://141.164.39.94:10000/videos/blog/weihuo.html)&nbsp; |&nbsp; [“1400例”谎言揭秘  ](http://141.164.39.94:10000/videos/blog/jiexi1400.html)
+#### [ 🎬  翻墙必看视频（YouTube热门频道、网站代理、时事热点、历史事件 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
 
-#### [ 🎬  翻墙必看视频（八九六四、法轮功、709大抓捕、香港反送中 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
-
-#### 网站代理：[大纪元新闻网](http://167.172.10.89:10080/gb/) &nbsp;|&nbsp; [新唐人电视台](http://167.172.10.89:8808/gb/) &nbsp;|&nbsp; [YouTube热门频道](http://158.247.203.241/youtube.html)
-
-#### 💥 [九评共产党](http://141.164.39.94:10000/videos/res/jiuping/)&nbsp; |&nbsp; [漫谈党文化](http://141.164.39.94:10000/videos/res/mtdwh/)&nbsp; |&nbsp; [共产主义的终极目的](http://141.164.39.94:10000/videos/res/zjmd/)&nbsp; |&nbsp; [魔鬼在統治著我們的世界](http://141.164.39.94:10000/videos/res/TheSpecter/)  
-
-#### [ 🔥  《九评共产党》之五 - 评江泽民与中共相互利用迫害法轮功](http://141.164.39.94:10000/videos/news/../res/jiuping/5.html)
-
-#### [ 🔥  中美外交衝突升級，中共高調進行雷州半島軍演，備戰還是避戰？](http://141.164.39.94:10000/videos/news/jf02.html)
-
-#### [ 🔥  任志强视频热传 批中共体制烂透 吁国人推墙（2012年）](http://141.164.39.94:10000/videos/news/ren001.html)
+#### [ 💥  禁书下载（政治、经济、人权、民主自由、文革、六四 ...）](https://github.com/gfw-breaker/books/blob/master/README.md)
 
 
   </div>
  </div>
  <p>
+  【看中国2020年11月29日讯】（看中国记者晏清流综合报导）北京当局的反腐行动不断催生了各种政治段子，嘲讽落马官员的各种丑态，在网络热传。有美媒说，
   <strong>
-   <span href="https://www.secretchina.com/news/gb/tag/夏天" target="_blank">
-    夏天
+   <span href="https://www.secretchina.com/news/gb/tag/习近平" target="_blank">
+    习近平
    </span>
   </strong>
-  里暑热盛行，吃什么解暑热最棒，首推当然是
+  安插在中纪委的亲信
   <strong>
-   绿豆汤
+   徐令义
   </strong>
-  ，是小时候最佳的解暑圣品。绿豆含有丰富的
+  ，权力惊人，徐当年带队巡视时，可以下令省委书记召集省委扩大会议，然后冲进会场抓人，检查与会者坐过的
   <strong>
-   蛋白质
+   椅子
   </strong>
-  、B族维生素和矿物质，不仅有
-  <strong>
-   清热解毒
-  </strong>
-  、消暑利水的作用，还能补充被汗水带走的水溶性维生素和矿物质。
+  ，凡留下尿迹者都在劫难逃。
   <span id="hideid" name="hideid" style="color:red;display:none;">
    <span href="https://www.secretchina.com">
    </span>
   </span>
  </p>
  <p>
-  <strong>
-   <span href="https://www.secretchina.com/news/gb/tag/绿豆汤" target="_blank">
-    绿豆汤
-   </span>
-   对人体的功效作用
-  </strong>
- </p>
- <p>
-  1、绿豆性凉、味甘，炎炎夏季喝有利于解暑气
- </p>
- <p>
-  由于绿豆汤好处多多，所在夏天一周会煮个1至2次，预防中暑，也可解解馋。而要驱暑就可直接煮绿豆水，或者同金银花一起煮，每天适当喝点就可起到一个祛暑的作用。而绿豆的清热之力在皮，所以说为了清热，煮绿豆汤时不要久煮，这样熬出来的绿豆汤颜色碧绿，比较清澈，喝这个汤可达到很好的清热功效。喝的时候也没必要把豆子一起吃进去，豆子可以跟饭一起煮。
- </p>
- <p>
-  2、绿豆中含有的多糖成份具有增强血清脂蛋白活性的作用，预防三高
- </p>
- <p>
-  因此也就可以起到一个促进血脂平衡，从而保护心血管健康。这种球蛋白和多糖还具有促进体内胆固醇分解的作用，可减少人体对胆固醇的吸收，从而起到预防三高的作用；两者一结合，可大大的减少夏季高温突发心绞痛，冠心病，动脉硬化等一些心脏疾病发病的机率。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  3、绿豆中的胰蛋白酶是一种可以帮助减少蛋白分解，对肾脏起到保护作用
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  肾脏是人体先天之本，对肾脏起到保护作用，自然也能减少很多疾病的侵扰。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p style="text-align:center">
-  <img alt="一早去市场买菜时顺便买了100元的仙草，和2包QQ圆就可以和绿豆组合在一起了，放冰箱凉凉的孩子们很喜欢。" src="https://img3.secretchina.com/pic/2020/7-25/p2740142a82395150-ss.jpg"/>
-  <br>
-   一早去市场买菜时顺便买了100元的仙草，和2包QQ圆就可以和绿豆组合在一起了，放冰箱凉凉的孩子们很喜欢。（摄影：心如）
-  </br>
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  4、绿豆中含有丰富的
-  <span href="https://www.secretchina.com/news/gb/tag/蛋白质" target="_blank">
-   蛋白质
+  11月27日，自由亚洲电台在专栏文章中说，中共十八大至十九大期间，也就是在王歧山执掌中纪委的5年时间里，
+  <span href="https://zh.wikipedia.org/wiki/%E4%B9%A0%E8%BF%91%E5%B9%B3" target="_blank">
+   习近平
   </span>
-  、磷脂等元素不仅能补充身体所需要的营养素，同时还可起到一个兴奋神经的作用，从而促进食欲
+  担任浙江省委书记期间的“二秘”徐令义，被安插进中纪委之后，权大无比。
+ </p>
+ <p>
+  <span href="https://www.secretchina.com/news/gb/tag/徐令义" target="_blank">
+   徐令义
+  </span>
+  随时可以令省委书记召省委扩大会议。凡是这样的会议场合，省委书记虽然是仍坐在会议主持人位置上，但却要看着“列席”会议的徐令义的眼色行事。
+ </p>
+ <p>
+  接下来的场景是，随着突然有两个身着铁灰色无徽章制服的壮汉徒手冲进会场，徐令义就会高喊一声XXX（或者XX）站起来。然后，这个被点名的副省部级干部往往都是双眼紧闭，两腿瘫软，被两个灰衣人半架半拖出已经弥漫起一股呛人尿臊味的会场。
+ </p>
+ <p>
+  文章说，在中共各级官场里，流传甚广的一个段子，内容是：当徐令义在其所巡视之处命令该省负责人召开的省委（直辖市委）扩大会议结束后，便命令手下逐一检查与会者坐过的椅子，凡是在椅子上留下尿迹的
+  <span href="https://www.secretchina.com/news/gb/tag/官员" target="_blank">
+   官员
+  </span>
+  日后都在劫难逃。
+ </p>
+ <p>
+  此前，类似的说法，多与时任中纪委书记
+  <span href="https://www.secretchina.com/news/gb/tag/王岐山" target="_blank">
+   王岐山
+  </span>
+  有关，因为王当时全力协助习近平铁腕反腐，中共官场一度流传“宁见阎王，不见老王”的说法。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -162,7 +96,7 @@
   </div>
  </center>
  <p>
-  由于天气候炎热的关系，大人孩子常常会有食欲不振的问题，而绿豆中含有丰富的蛋白质，绿豆中含有丰富的蛋白质、磷脂等元素不仅能补充身体所需要的营养素，同时还可起到一个兴奋神经的作用，从而促进食欲。
+  网络上更是热传的一个有关王岐山反腐打虎的段子，同样是有些不雅：
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -177,7 +111,7 @@
   </div>
  </center>
  <p>
-  5、绿豆具有排毒的作用
+  某次会议最后，王岐山突然发言：“今天会结束后，有两个人需要留下！”
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -192,7 +126,131 @@
   </div>
  </center>
  <p>
-  临床表示绿豆中含有抗过敏成份，因此夏季多喝绿豆汤的话，可起到一个预防夏季高发皮肤病荨麻疹的作用，促进身体健康。
+  说完，他端起水杯喝水，然后低头看手里的名单。全场鸦雀无声，半分钟过去了，空气中渐渐飘起一股尿骚味。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  王继续说：“这两个人，一个是国企干部，一个是政府里的。”
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  说完他再次停下来。慢慢地，会场里恶臭味渐起。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  最后，王慢慢地一字一顿地说：“这两个人就是一汽的徐建一和云南的仇和。你俩留下，其他人可以走了。”
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  大家散去后，会场已经污秽不堪。王对工作人员说：“难为你们了！去看看地上的屎尿，和座位名单核对一下。”
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  一工作人员汇报说：“王书记，有一个尿了好多，而且还拉了，他尿里好像还带着油渍，经过核对，是中石油的廖永远。”
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  王一挥手：“查。”
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  上述政治段子中，徐建一是一汽集团公司董事长、党委书记；2015年3月15日被中纪委公布正接受调查。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  一汽集团的前身是中国第一汽车制造厂，也是
+  <span href="https://www.secretchina.com/news/gb/tag/江泽民" target="_blank">
+   江泽民
+  </span>
+  的第一个发迹地。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -211,7 +269,7 @@
   </ins>
  </center>
  <p>
-  6、减少辐射
+  上述政治段子中，仇和是原云南省委副书记。同年3月15日上午，中共人大会议闭幕。中午近1点，中纪委发布消息：仇和正接受调查。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -226,7 +284,7 @@
   </div>
  </center>
  <p>
-  现代人离不了电脑，所以对于电脑一族来说，日常多喝点绿豆汤还能起到一个抗辐射的作用，可减少辐射对人体的危害。
+  廖永远则是中石油总经理，同年3月16日，中共中纪委宣布廖永远被调查。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -241,9 +299,7 @@
   </div>
  </center>
  <p>
-  <strong>
-   虽然绿豆有这么多好处，但喝绿豆汤也有一些禁忌喔！
-  </strong>
+  有关中纪委查贪冲进会场抓人，也有港媒披露一个案例：2014年6月27日下午，广东省委召开省委会议。在三个委员发言后，广东省委书记胡春华表示有一个事件要宣布。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -258,7 +314,7 @@
   </div>
  </center>
  <p>
-  1、如果有四肢冰凉、脾胃虚寒、腹胀、腹泻便稀等症状者，不宜食用绿豆汤，吃了绿豆反而会加重症状，甚至引发其他疾病。
+  话音刚落，省委办主任带着中纪委两名成员和随行4名便装特警进入会议室。中纪委成员宣布：“对广东省委常委、广州市委书记万庆良即时‘双规’。”
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -273,7 +329,7 @@
   </div>
  </center>
  <p>
-  2、绿豆中蛋白质含量比鸡肉还多，大分子蛋白质需要在酶的作用下转化为小分子肽、氨基酸才能被人体吸收。老人、儿童以及体质虚弱人群，肠胃消化功能较差，容易因此消化不良，所以也要少吃。
+  万庆良用发抖的双手拿着“双规”文件看了看，语无伦次地表示要好好交代。万庆良在双规文件上签名后便瘫倒……
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -287,7 +343,37 @@
    </center>
   </div>
  </center>
- <p style="margin-bottom:8px;">
+ <p>
+  报导称，当天参加会议的省委委员、省委常委有40多人。中纪委人员、特警进入会议室的那一刻，官员们个个神情惊慌、脸色发白。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  万庆良被带走后，惊恐中的官员们仍呆若木鸡地站在那里。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p style="margin-bottom:12px;">
   <hr style="border-top: 1px dashed  ;" width="100%"/>
   <br/>
   【诚征荣誉会员】溪流能够汇成大海，小善可以成就大爱。我们向全球华人诚意征集万名
@@ -305,7 +391,7 @@
   ，就可以助力我们突破审查与封锁，向至少10000位中国大陆同胞奉上独立真实的关键资讯，在危难时刻向他们发出预警，救他们于大瘟疫与其它社会危难之中。
   <center>
    <span href="https://account.secretchina.com/planshopcart.php?pid=2020plana&amp;carf=add&amp;code=b5">
-    <img src="https://img3.secretchina.com/pic/2020/7-21/p2736951a334373943.jpg" width="300px"/>
+    <img src="/kzgd/ad/kzgad202010728.gif" width="100%"/>
    </span>
   </center>
   <center>
@@ -337,13 +423,13 @@
 
 <hr/>
 手机上长按并复制下列链接或二维码分享本文章：<br/>
-https://github.com/gfw-breaker/banned-news3/blob/master/pages/p8/940796.md <br/>
-<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p8/940796.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p8/940796.md.png'/></a> <br/>
-原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/07/28/940796.html
+https://github.com/gfw-breaker/banned-news3/blob/master/pages/p2/954073.md <br/>
+<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p2/954073.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p2/954073.md.png'/></a> <br/>
+原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/11/29/954073.html
 
 
 ------------------------
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;|&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md) &nbsp;| [《九评共产党》](https://github.com/gfw-breaker/9ping.md/blob/master/README.md#九评之一评共产党是什么) | [《解体党文化》](https://github.com/gfw-breaker/jtdwh.md/blob/master/README.md) | [《共产主义的终极目的》](https://github.com/gfw-breaker/gczydzjmd.md/blob/master/README.md)
 
 
-<img src='http://gfw-breaker.win/banned-news3/pages/p8/940796.md' width='0px' height='0px'/>
+<img src='http://gfw-breaker.win/banned-news3/pages/p2/954073.md' width='0px' height='0px'/>
