--- a/pages/nsc412/n12581514.md
+++ b/pages/nsc412/n12581514.md
@@ -91,7 +91,7 @@
  “我来这里，首先支持我们的宪法和唐纳德·川普，”他说。“我认为这（舞弊）很荒谬，政客们一直以来对我们是如何做的。他们应该为我们服务，而不是要我们为他们服务。”
 </p>
 <p>
- 安佩说，大多数美国人一直在睡觉，听任腐败继续下去，“但现在该醒了。”他补充说，至少，近几个月来，“黑人的命也是命”（Black Lives Matter）和安提法（Antifa）等组织对民众实施的暴力应当使人们想起纳粹主义。 “而且我们的媒体就和其他人一样腐败。”
+ 安佩说，大多数美国人一直在沉睡，听任腐败继续下去，“但现在该醒了。”他补充说，至少，近几个月来，“黑人的命也是命”（Black Lives Matter）和安提法（Antifa）等组织对民众实施的暴力应当使人们想起纳粹主义。 “而且我们的媒体就和其他人一样腐败。”
 </p>
 <p>
  “就是在我最疯狂的梦中，我都绝不会想到我们社会中会有如此多的腐败，恰恰是从联邦调查局到应该帮助宪法的其它组织，”他说。 “所以我很高兴投票支持他（川普），我认为他绝对需要继续担任总统。”
