--- a/pages/p3/954124.md
+++ b/pages/p3/954124.md
@@ -1,4 +1,4 @@
-### 见证中共邪恶政权各种谎言 宋庆龄悔不当初(图)
+### 加拿大恢复公民入籍考试 网上进行(图)
 ------------------------
 
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;&nbsp;|&nbsp;&nbsp; [法轮功真相](https://github.com/begood0513/basic/blob/master/README.md)  &nbsp;&nbsp;|&nbsp;&nbsp; [手把手翻墙教程](https://github.com/gfw-breaker/guides/wiki)  &nbsp;&nbsp;|&nbsp;&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md)  
@@ -7,9 +7,9 @@
 
 <div class="article_right" style="fone-color:#000">
  <p style="text-align:center">
-  <img alt="宋庆龄与毛泽东和邓小平在苏联莫斯科。" src="https://img3.secretchina.com/pic/2020/11-18/p2820632a427062478-ss.jpg"/>
+  <img src="https://img3.secretchina.com/pic/2020/11-29/p2828151a618026944-ss.jpg"/>
   <br>
-   见证中共独裁政权各种谎言，宋庆龄悔不当初。图为宋庆龄与毛泽东和邓小平在苏联莫斯科。（图片来源：公有领域）
+   拖了8个月，加拿大于11月26日启动入籍在线考试平台。（图片来源：Pixabay）
    <span id="hideid" name="hideid" style="color:red;display:none;">
     <span href="https://www.secretchina.com">
     </span>
@@ -29,46 +29,95 @@
   </div>
  </div>
  <p>
-  1949年，
-  <span href="https://www.secretchina.com/news/gb/tag/蒋介石" target="_blank">
-   蒋介石
+  【看中国2020年11月29日讯】中共病毒（又称
+  <span href="https://www.secretchina.com/news/gb/tag/新冠状病毒" target="_blank">
+   新冠状病毒
   </span>
-  和宋家姐妹轮番劝
+  ，COVID－19）疫情大爆发后，
   <strong>
-   宋庆龄
+   加拿大
   </strong>
-  离开大陆，宋拒绝了，留下了与推翻丈夫政权的人合作，匪夷所思，除了开始那几年的尊重，宋更多的是被冷落，被当做政治花瓶点缀，宋见证了这个独裁政权的各种谎言与荒诞，心中的苦闷是不能言说的。1994年11月，
+  移民部暂停
   <strong>
-   中共
+   公民
   </strong>
-  书记处审查通过了党史编委会整理的关于宋庆龄1949年后32年经历的材料。
+  考试长达8个月。11月26日，加拿大移民部启动了一个在线
+  <strong>
+   入籍考试
+  </strong>
+  平台，让那些本来有预约，但因疫情而耽搁了的人进行考试。
   <span id="hideid" name="hideid" style="color:red;display:none;">
    <span href="https://www.secretchina.com">
    </span>
   </span>
  </p>
  <p>
-  这份材料的内容提要如下：
- </p>
- <p>
-  1955年11月，宋给毛写信：“我很不理解提出对工商业的改造，
-  <span href="https://www.secretchina.com/news/gb/tag/共产党" target="_blank">
-   共产党
+  据CBC报导，
+  <span href="https://www.secretchina.com/news/gb/tag/加拿大" target="_blank">
+   加拿大
   </span>
-  曾向工商界许下长期共存、保护工商业者利益的诺言。这样一来，不是变成自食其言了吗？资本家已经对共产党的政策产生了怀疑和恐惧，不少人后悔和抱怨。”毛批示：“宋副委员长有意见，要代表资本家讲话。”
+  移民、难民和公民部（IRCC）启动的全新虚拟公民考试平台，将首先让约5，000名在瘟疫大流行之前预约，但随后被取消的考生进行考试。
  </p>
  <p>
-  1957年宋又
-  <span href="https://www.secretchina.com/news/gb/tag/写信" target="_blank">
-   写信
+  IRCC表示，将在接下来的几个月对新平台进行测试，在监控证明该考试平台的可靠性后（可能明年初），移民部将邀请更多人进行考试。
+ </p>
+ <p>
+  考试开始之前，考生将被要求提供个人信息以确认身份，并且参加者必须用网络摄像头对自己和身份证件进行拍照，然后才能开始测试。
+ </p>
+ <p>
+  整个考试过程中，摄像系统都将拍摄参加考试的人。该程序已用于疫期进行的其它考试，例如律师考试或法学院入学考试等，以确保考试的诚信。
+ </p>
+ <p>
+  与现场考试的一样，网上考试总共20个问题，参加者需要在30分钟内答完。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  IRCC在通知中称，被邀参加在线考试的人将会自动收到移民部的电子邮件通知，人们无需联系他们。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  不愿意在网上考、仍然希望参加现场考试的人，则需要耐心等待，但IRCC尚未确定恢复日期。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  由于瘟疫大流行，IRCC于3月14日取消了所有
+  <span href="https://www.secretchina.com/news/gb/tag/公民" target="_blank">
+   公民
   </span>
-  给党中央：“党中央号召大鸣大放，怎么又收了？共产党不怕国民党八百万大军，不怕美帝国主义，怎么会担心人民推翻党的领导和人民政府？共产党要敢于接受各界人士的批评，批评人士大多是爱国、爱党的，一些民主党派人士为新中国的解放，作出了家庭、个人名利的牺牲，一些二、三十岁的青年知识分 子怎么可能一天就变成反党反社会主义分子？我很不理解这个运动，我想了两个多月，还是想不通，有这么多党内党外纯粹的人会站在共产党和人民政府的对立面？要推翻共产党？”
- </p>
- <p>
-  从1958年起，宋曾推病拒绝参加人大常委会。党中央委派刘少奇、周恩来、董必武去做工作，宋只得继续参加。1959年4月，宋在人大被推举为国家副主席。宋先后两次推辞：“我是落伍了，思想跟不上，才挂个名，作个样子，对国家不利。”提议由李富春或乌兰夫担任。
- </p>
- <p>
-  宋任国家副主席，是刘少奇、董必武、林伯渠、李富春提议的，政治局讨论时，21人中18人赞成，3人反对，反对者是：毛、林彪、康生。当时毛发言：“宋是我们民主革命时期的同路人，在社会主义革命时期，她和我们就走不到一起了。从不赞成我们的方针路线到反对我们的方针路线。我们同她是不同的阶级。”
+  身份考试、重考、听证和面谈。当时暂停的公民入籍仪式，从今年4月起就改为在网上举行。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -83,7 +132,7 @@
   </div>
  </center>
  <p>
-  文革期间，宋先后给毛和党中央写了七封信，表达了她对“文革”的不理解、反感，并对共产党极度失望。1967年8月、1969年11月、1976年6月，宋曾三次产生厌世思想，在信中以及对来探望她的领导人的谈话中流露出对自己所选择的道路感到怅惘和说不出的苦闷。
+  获得公民身份，意味着一个人将从此拥有在加拿大投票的权利，并能拥有加拿大的护照，也使许多人更有安全感和定居感。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -98,37 +147,7 @@
   </div>
  </center>
  <p>
-  七封信中说：“我不懂文化，说小说都是政治，而且都是毒草，我糊涂了，一夜天下来，一些和我一起工作的同事都变成了走资派、反党集团、野心家、牛鬼蛇神。中央要我学习批判揭发刘少奇，我不会作的，刘少奇主席在党中央工作了三、四十年，今天会是叛徒、内奸！我不相信，一个叛徒内奸当了七年的国家主席，现在宪法还有效吗？怎么可以乱抓人、乱斗人、逼死人？党中央要出来讲话。这种无法无天的情况，自己伤害自己的同志、人民，是罪行。我们的优秀干部从与国民党的战斗中走过来，却死在自己的队伍中，这是什么原因？”
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  1970年3月，毛对周恩来说：“她不愿意看到今天的变化，可以到海峡对岸，可以去香港、去外国，我不挽留。”并指示周恩来、李先念把他的话传达给宋。传达时他们说：“主席很关心你，知道你的心情不怎么好，建议你到外面散散心，休息休息。”宋说：“是否嫌我还在？我的一生还是要在这块土地上，走完最后几步。”于是宋推病拒绝出席一些节日活动和招待会，说：“我参加会伤感，还是不参加，参加一次，回来就要进医院。另外，我也不想做政治上的点缀。”
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  1980年11月，宋给党中央写了她一生中最后的一封信：“一、国家要振兴，恢复元气，这是一次大好时机。二、要总结建国以来政治运动对国家对人民造成的创伤。三、请不要把我和国父放在一起，我不够格的。”
+  在疫情之前，IRCC已在实施一项公民身份现代化计划，包括在线公民考试。IRCC表示，提供在线考试旨在防疫，人们可以在方便的时候参加考试。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -192,13 +211,13 @@
 
 <hr/>
 手机上长按并复制下列链接或二维码分享本文章：<br/>
-https://github.com/gfw-breaker/banned-news3/blob/master/pages/p6/904686.md <br/>
-<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p6/904686.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p6/904686.md.png'/></a> <br/>
-原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/11/26/904686.html
+https://github.com/gfw-breaker/banned-news3/blob/master/pages/p3/954124.md <br/>
+<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p3/954124.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p3/954124.md.png'/></a> <br/>
+原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/11/29/954124.html
 
 
 ------------------------
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;|&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md) &nbsp;| [《九评共产党》](https://github.com/gfw-breaker/9ping.md/blob/master/README.md#九评之一评共产党是什么) | [《解体党文化》](https://github.com/gfw-breaker/jtdwh.md/blob/master/README.md) | [《共产主义的终极目的》](https://github.com/gfw-breaker/gczydzjmd.md/blob/master/README.md)
 
 
-<img src='http://gfw-breaker.win/banned-news3/pages/p6/904686.md' width='0px' height='0px'/>
+<img src='http://gfw-breaker.win/banned-news3/pages/p3/954124.md' width='0px' height='0px'/>
