同步于: 11月29日15时52分

--- a/pages/p4/954131.md
+++ b/pages/p4/954131.md
@@ -1,4 +1,4 @@
-### 重判任志强 再挖一个坑(图)
+### 面对川普 拜登和习近平都晚了一步(组图)
 ------------------------
 
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;&nbsp;|&nbsp;&nbsp; [法轮功真相](https://github.com/begood0513/basic/blob/master/README.md)  &nbsp;&nbsp;|&nbsp;&nbsp; [手把手翻墙教程](https://github.com/gfw-breaker/guides/wiki)  &nbsp;&nbsp;|&nbsp;&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md)  
@@ -7,9 +7,9 @@
 
 <div class="article_right" style="fone-color:#000">
  <p style="text-align:center">
-  <img alt="" src="https://img3.secretchina.com/pic/2020/4-9/p2666261a405633167-ss.jpg" style="height:337px; width:600px"/>
+  <img alt="11月25日在宾州葛底斯堡，一名川普的支持者在宾州参议院大选舞弊听证会的场外。" src="https://img3.secretchina.com/pic/2020/11-29/p2828241a514873275-ss.jpg"/>
   <br>
-   重判任志强，习近平再挖一个坑。（图片来源：看中国合成图）
+   11月25日在宾州葛底斯堡，一名川普的支持者在宾州参议院大选舞弊听证会的场外。（图片来源：Samuel Corum/Getty Images）
    <span id="hideid" name="hideid" style="color:red;display:none;">
     <span href="https://www.secretchina.com">
     </span>
@@ -21,53 +21,46 @@
 
 ---
 
-#### 💥 [《伪火》 - 天安门自焚真相 ](http://158.247.195.190:10000/videos/blog/weihuo.html)&nbsp; |&nbsp; [“1400例”谎言揭秘  ](http://158.247.195.190:10000/videos/blog/jiexi1400.html)
-
 #### [ 🎬  翻墙必看视频（YouTube热门频道、网站代理、时事热点、历史事件 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
+
+#### [ 💥  禁书下载（政治、经济、人权、民主自由、文革、六四 ...）](https://github.com/gfw-breaker/books/blob/master/README.md)
 
 
   </div>
  </div>
  <p>
-  【看中国2020年9月27日讯】
-  <span href="https://www.secretchina.com/news/gb/tag/任志强" target="_blank">
-   任志强
+  【看中国2020年11月29日讯】虽然拜登发表了胜选演讲，接受了一些国家领导人的祝贺，他也在组建交接团队等，但可惜他还是晚了一步，因为他遇到了
+  <span href="https://www.secretchina.com/news/gb/tag/川普" target="_blank">
+   川普
   </span>
-  被判十八年，罪名是贪污，这是在所有中国人意料之内的结果，只是没想到判得那么重。
+  (特朗普)。
   <span id="hideid" name="hideid" style="color:red;display:none;">
    <span href="https://www.secretchina.com">
    </span>
   </span>
  </p>
  <p>
-  今日抓捕反对派，只有两招，一是说他嫖妓，二是说他贪腐，前者是许章润，后者是任志强。一个人“妄议中央”被捕，不必等官方判下来，一定是这两个罪名，因为最方便，也最容易“得人心”。
+  虽然有登峰造极的腐败政治机器，有主流媒体们无操守的背书，甚至还有国际共产主义黑手的扶持，但是
+  <span href="https://www.secretchina.com/news/gb/tag/拜登" target="_blank">
+   拜登
+  </span>
+  还是晚了一步，因为他遇到了川普，如果拜登早生20年，面对的是别的对手，那拜登或可自认大功告成。
  </p>
  <p>
-  在中共体制内，有哪个官员不贪腐？不贪腐的在官场就没有立足之地。官场上人人贪，只有你不贪，你是不是比别人情操高尚？你是不是准备随时揭露官场黑暗？你不同流合污，你就不是自己人，你就没有朋友，你就随时有灭顶之灾。
+  但是川普就是要赢、赢、赢，就像4年来他对支持者们不断说的：“我们会赢的如此之多，你们甚至会感到赢的都累了，但是我说，我们还是要赢。”川普的人生就是这样，川普就是为了这个时代而量身打造的，他的胆识，他的坚持，他的领导力和执行力，今天的这些政治人物远非他的对手。
  </p>
  <p>
-  就官方公布的那数千万贿款，任志强可称廉洁。早前有一个北京小小村官，从家里搜出现金七百多万，金条三十一公斤。任志强若被人从家里搜出巨款，还有不公布的吗？那些所谓贿款，其实都是摆在明面上的，根本是官场惯例，只要一查，一定都差不多是那个数字。
+  如今，
+  <span href="https://www.secretchina.com/news/gb/tag/大选" target="_blank">
+   大选
+  </span>
+  中触目惊心的舞弊正在越来越多被展示在公众面前。美国虽然被社会主义严重侵蚀，但这片土地上还是有很多爱国者，他们的先辈们曾经为了自由不惜生命，今天他们也有同样勇气，站出来曝光和抵制选举舞弊。
  </p>
  <p>
-  公司虽是国企，公私之间的分际一般都很模糊，有些钱说是公家分的也可以，说是私人占用的也可以，有些是别人送礼，但送礼与贿赂之间也没有清晰标准。生意做那么大，数十年经他的手出入的金钱以百亿计，要找到千万的差错不会太难。以今日中共高官家产动辄百亿的标准来看，任志强简直是太清廉了。
+  社会主义左派们，还是低估了美国传统价值的力量，这种力量正在被唤醒，美国面临着一场根本性的大洗牌。
  </p>
  <p>
-  更不必说，这些都是官方的数字，任志强不认也得认。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  任志强最不应该的，当然敢犯龙颜。今日在人屋檐下，不得不低头，虽然认罪了，只为保护家小，但在庭上一言不发，始终还是一条汉子。
+  川普本来只是想得到一场大选的胜利，但根据现在时局发展，他将得到的是一个更大的、高出一个数量级的胜利。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -82,10 +75,44 @@
   </div>
  </center>
  <p>
+  就像当年的林肯，在他赢得大选，还没有正式就职总统时，就已经有7个南方州退出联邦了。这种危机，是之前的15位美国总统都没有遇到过的。但是，当历史翻过这一页，原来这种危机，却是在给林肯和美国准备一场更大的胜利，在给美国和人类准备更长久的未来。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  不但拜登晚生了20年，遇到了川普，错以为共产党可以维护自己权力的
   <span href="https://www.secretchina.com/news/gb/tag/习近平" target="_blank">
    习近平
   </span>
-  重判任志强，当然用意在杀鸡儆猴，但这一招对习来说，也是险招，也就是他也被判了一个滥用权力。不重判任志强，便会有红二代、官场中人有样学样，把当下掌权的这一伙人都目为小丑，东西南北中民怨沸腾，万一都闹起来，江山即刻不稳。因此，打任志强既是发泄一己之私愤，也是形势所迫。
+  也晚了一步，经过此次危机后的川普，对中共的围剿将开足全部马力。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p style="text-align:center">
+  <img src="https://img3.secretchina.com/pic/2020/11-29/p2828281a163294028-ss.jpg"/>
+  <br>
+   2017年11月9日，川普和习近平在北京会面。（图片来源：NICOLAS ASFOURI/AFP via Getty Images）
+  </br>
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -100,26 +127,11 @@
   </div>
  </center>
  <p>
-  但任志强始终是
-  <span href="https://www.secretchina.com/news/gb/tag/红二代" target="_blank">
-   红二代
+  这就像1981年3月30日，刚上任仅两个月的
+  <span href="https://www.secretchina.com/news/gb/tag/里根" target="_blank">
+   里根
   </span>
-  代表人物，因为敢言，在官场和民间都有口碑。从任志强早前的公开发言中，知道他读很多书，思想开阔，见识不凡，对社会现象和中国问题往往鞭辟入里。他说的话很有条理，很有逻辑性，斩钉截铁。这样民望很高的人，你把他重判十八年，实际上是对人间正义的重大挑衅，是对社会公平的践踏。中国人嘴上不说，心里还是明白的，这种明白本身，就是对习近平政权的一种潜在威胁。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  这件事也会引起红二代圈子的不同反应，有的人会害怕，有的人会不服，有的人会反感，有的人会愤怒。任志强有自己的哥们，有一大帮同声同气的生意人和文化人，这些人会有兔死狐悲之感，会对这个政权产生更强烈的离心。他们都有自己的社会关系，上下串连，会形成对习近平的广泛的不满。
+  遭遇一名心理疾病青年的暗杀，一颗子弹停留在距里根心脏不到1英寸的地方。要知道当时的里根已经70岁了，他的幸存被认为是奇迹。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -138,7 +150,25 @@
   </ins>
  </center>
  <p>
-  习近平初上台，就开过一个红二代座谈会，那是一个交心交底的会议，就是拍胸脯保证红二代们的利益，把红二代都拉拢到他的麾下，从此以后，红二代的利害就是一体的，有习近平在，保证不会动红二代的奶酪，保证大家闷声发大财。习近平以红色江山为依托，要求红二代们效忠从那时开始，所谓反贪，从未动过一个红二代。在习近平手上倒台的，从政治局常委以下，找不到一个红二代。
+  当里根最终康复回到白宫时，他在日记中写道：“不管今后发生什么，我的生命都是上帝给的，我将用我的一切能力为上帝服务。”
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p style="text-align:center">
+  <img src="https://img3.secretchina.com/pic/2020/11-29/p2828251a274051333-ss.jpg"/>
+  <br>
+   1981年4月，此前被暗杀受伤后，还在医院恢复中的里根。（图片来源：White House/Getty Images）
+  </br>
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -153,7 +183,7 @@
   </div>
  </center>
  <p>
-  但这一次，习近平动了红二代，而且是有代表性的红二代，这件事非同小可，绝对会产生深远影响。红二代中不乏思想较为开放，政治倾向温和的人，像早前为禁蒙古语教学发声的马晓力，在红二代中有很高威望，她就是比较理性的。
+  历史学家保罗・肯戈尔（Paul Kengor）写道：“对于里根来说，（为上帝的）这项服务就包括冷战。他之前就认识到，苏联是一个邪恶的东西，需要化作历史的灰烬，这是他求得白宫的主要原因。现在，他把取得冷战胜利作为头等大事。”
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -168,22 +198,11 @@
   </div>
  </center>
  <p>
-  像习近平那样，老是嫌中共覆灭的速度不够快，老是要加速的红二代，毕竟不会太多，大家都明白取悦人民的重要性，都明白事情不能做绝，要留有余地。这一次，任志强被重判，红二代中一定会有强烈反响，且看往后还会有什么事发生。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  习近平学识有限，心胸狭窄，又生就一种骄横性格，这是他执政以来就屡楼碰壁的原因。坑越挖越多，一个比一个大，侥幸跳过一两个坑，难保跳过所有的坑，所以他的“总加速师”雅号，绝非浪得虚名。
+  川普政府今年7月已经发表了《共产
+  <span href="https://www.secretchina.com" target="_blank">
+   中国
+  </span>
+  与自由世界的未来》，下定了灭共的决心。可以想像，在此次危机中取胜的川普明年1月20日就职后，他将对自己的历史使命有更加深刻的了解，中共将面临一个更加强大的川普和美国。1949年之后中国大陆的这个黑白颠倒、善恶颠倒的时代已经即将结束。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -216,7 +235,7 @@
   ，就可以助力我们突破审查与封锁，向至少10000位中国大陆同胞奉上独立真实的关键资讯，在危难时刻向他们发出预警，救他们于大瘟疫与其它社会危难之中。
   <center>
    <span href="https://account.secretchina.com/planshopcart.php?pid=2020plana&amp;carf=add&amp;code=b5">
-    <img src="/kzgd/ad/join_membership_728x90.jpg" width="100%"/>
+    <img src="/kzgd/ad/kzgad202010728.gif" width="100%"/>
    </span>
   </center>
   <center>
@@ -248,13 +267,13 @@
 
 <hr/>
 手机上长按并复制下列链接或二维码分享本文章：<br/>
-https://github.com/gfw-breaker/banned-news3/blob/master/pages/p4/947346.md <br/>
-<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p4/947346.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p4/947346.md.png'/></a> <br/>
-原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/09/27/947346.html
+https://github.com/gfw-breaker/banned-news3/blob/master/pages/p4/954131.md <br/>
+<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p4/954131.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p4/954131.md.png'/></a> <br/>
+原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/11/29/954131.html
 
 
 ------------------------
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;|&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md) &nbsp;| [《九评共产党》](https://github.com/gfw-breaker/9ping.md/blob/master/README.md#九评之一评共产党是什么) | [《解体党文化》](https://github.com/gfw-breaker/jtdwh.md/blob/master/README.md) | [《共产主义的终极目的》](https://github.com/gfw-breaker/gczydzjmd.md/blob/master/README.md)
 
 
-<img src='http://gfw-breaker.win/banned-news3/pages/p4/947346.md' width='0px' height='0px'/>
+<img src='http://gfw-breaker.win/banned-news3/pages/p4/954131.md' width='0px' height='0px'/>
