--- a/pages/nsc418/n12582938.md
+++ b/pages/nsc418/n12582938.md
@@ -275,6 +275,13 @@
  换句话说，当州议会通过全民投票选择选举人无法实现时，州议会应该换一种方式来指定选举人。
 </p>
 <p>
+ 【大选更新11·28】请点击
+ <ok href="https://www.epochtimes.com/gb/20/11/28/n12581514.htm" rel="noopener noreferrer" target="_blank">
+  这里
+ </ok>
+ 。
+</p>
+<p>
  责任编辑：李玲
 </p>
 </div>
