--- a/pages/nf4514/n12582938.md
+++ b/pages/nf4514/n12582938.md
@@ -57,6 +57,34 @@
  情况的实时更新：
 </h4>
 <h3>
+ 大选后 川普将首次接受福克斯专访
+</h3>
+<p>
+ 川普总统在推特上预告，他将于11月29日早上10点接受福克斯新闻主持人玛丽亚·巴蒂罗姆（Maria Bartiromo ）的专访，这也是他在
+ <ok href="https://www.epochtimes.com/gb/tag/%E7%BE%8E%E5%9B%BD%E5%A4%A7%E9%80%89.html">
+  美国大选
+ </ok>
+ 日之后首次接受媒体专访。
+</p>
+<p>
+ 福克斯新闻在这次大选后“向左转”，引发川普团队的不满。
+</p>
+<p>
+ 巴蒂罗姆近日多次对推特等社交媒体审查她有关大选的言论表示不满，决定转投新兴社交媒体Parler。
+</p>
+<h3>
+ 鲍威尔：应对Dominion合同进行刑事调查
+</h3>
+<p>
+ 著名律师鲍威尔（Sidney Powell）周六（11月28日）表示，乔治亚州购买Dominion系统的价值1.07亿美元合同应该被彻底调查，以查出其中涉及的贿赂。“应该对参与为乔治亚州购买Dominion系统的每个人进行彻底的刑事调查。”鲍威尔周六接受Newsmax TV采访时说。
+</p>
+<p>
+ 鲍威尔表示，鉴于这个系统如此骇人听闻，鉴于该系统的设计就是为了操纵选举、破坏美国公民合法投下的真正选票这一事实，需要进行调查。
+</p>
+<p>
+ 鲍威尔的调查正出现潜在的刑事指控，包括乔州签合同官员的家人所收到的金钱或好处。
+</p>
+<h3>
  新泽西集会组织者：必须支持川普总统
 </h3>
 <figure class="wp-caption alignnone" id="attachment_12582946" style="width: 600px">
@@ -123,6 +151,18 @@
  他说，“他们首先是用这次病毒（疫情）当借口，要搞邮寄投票，因为他们清楚在投票站不方便直接作弊，所以他们先从邮寄选票下手。我希望各个州的这些（舞弊）问题能汇总起来，一起交到最高法院，让他们决定究竟该怎么处理。”
 </p>
 <h3>
+ 埃利斯：理性之人不会无视这灾难性选举
+</h3>
+<p>
+ 川普（特朗普）竞选团队法律顾问珍娜‧埃利斯（Jenna Ellis）周六（11月28日）表示，任何有理性的人都不可能无视这次灾难性选举。自由、公平的选举很重要。
+</p>
+<p>
+ 埃利斯周六在推特上发表推文说，任何有理性的人都不可能无视这次彻底灾难性的选举，“也不会希望我们的国家有这样的先例”。
+</p>
+<p>
+ 她再次强调，民主党可能喜欢媒体宣布的大选结果，但法律不是那样运作的，“自由、公平、不受贿赂的选举很重要。这就是为什么我们有（《宪法》）第二条第一款第二节。”她在推特上说。
+</p>
+<h3>
  前情报官作证：Dominion操纵大选
 </h3>
 <figure class="wp-caption aligncenter" id="attachment_12562946" style="width: 600px">
@@ -137,11 +177,7 @@
  鲍威尔律师向密歇根州和乔治亚州提交诉状，在诉状附录的大量证词中，一名前美军情报官宣誓作证，通过公开、简单、可被独立核实的方式，证实了鲍威尔诉状对Dominion投票系统的指控。
 </p>
 <p>
- 该证人以前是美国陆军第305军事情报营的电子情报分析师，他对Dominion投票系统和“爱迪生研究（Edison Research）”等涉嫌舞弊相关的组织进行了网络安全分析。在本次
- <ok href="https://www.epochtimes.com/gb/tag/%E7%BE%8E%E5%9B%BD%E5%A4%A7%E9%80%89.html">
-  美国大选
- </ok>
- 中，很多主流媒体都是使用“爱迪生研究”的大选实时计票数据。
+ 该证人以前是美国陆军第305军事情报营的电子情报分析师，他对Dominion投票系统和“爱迪生研究（Edison Research）”等涉嫌舞弊相关的组织进行了网络安全分析。在本次美国大选中，很多主流媒体都是使用“爱迪生研究”的大选实时计票数据。
 </p>
 <p>
  证人最后得出专业意见，指证说，Dominion等这些组织蓄意让外国敌对势力侵入它们的网络基础设施，来监控和操纵包括今年大选在内的美国选举。
