--- a/pages/p5/954155.md
+++ b/pages/p5/954155.md
@@ -1,4 +1,4 @@
-### 中芯确认遭美制裁 中国制造2025恐严重受挫
+### 中国加密货币第一大案 二审没收金额逾5千亿
 ------------------------
 
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;&nbsp;|&nbsp;&nbsp; [法轮功真相](https://github.com/begood0513/basic/blob/master/README.md)  &nbsp;&nbsp;|&nbsp;&nbsp; [手把手翻墙教程](https://github.com/gfw-breaker/guides/wiki)  &nbsp;&nbsp;|&nbsp;&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md)  
@@ -7,22 +7,21 @@
 
 <div class="article_right" style="fone-color:#000">
  <p>
-  【看中国2020年10月5日讯】（法广RFI）9月4日，路透社援引
+  【看中国2020年11月29日讯】堪称中国
   <strong>
-   美国
-  </strong>
-  国防部表示，
-  <strong>
-   <span href="https://www.secretchina.com/news/gb/tag/川普" target="_blank">
-    川普
+   <span href="https://www.secretchina.com/news/gb/tag/加密货币" target="_blank">
+    加密货币
    </span>
-   (特朗普)
   </strong>
-  政府正在考虑将
+  第一大案的
   <strong>
-   中芯国际
+   PlusToken
   </strong>
-  列入贸易黑名单，理由是“中芯国际涉军”，后者随即表示“不知情”，并声明“与中国军方毫无关系”，没有为任何军用终端用户生产。然而10月4日晚上，中芯国际首次证实受到美方出口管制。
+  平台传销案近日
+  <strong>
+   二审
+  </strong>
+  驳回上诉，维持原判，依法没收所得资金及收益。陆媒引述判决文件显示，没收金额初估逾人民币5215亿元。
   <span id="hideid" name="hideid" style="color:red;display:none;">
    <span href="https://www.secretchina.com">
    </span>
@@ -33,49 +32,42 @@
 
 ---
 
-#### 💥 [《伪火》 - 天安门自焚真相 ](http://158.247.195.190:10000/videos/blog/weihuo.html)&nbsp; |&nbsp; [“1400例”谎言揭秘  ](http://158.247.195.190:10000/videos/blog/jiexi1400.html)
-
 #### [ 🎬  翻墙必看视频（YouTube热门频道、网站代理、时事热点、历史事件 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
+
+#### [ 💥  禁书下载（政治、经济、人权、民主自由、文革、六四 ...）](https://github.com/gfw-breaker/books/blob/master/README.md)
 
 
   </div>
  </div>
  <p>
-  据指出，美方根据“军事最终应用”或“军事最终用户限制条款”对
-  <span href="https://www.secretchina.com/news/gb/tag/中芯国际" target="_blank">
-   中芯国际
+  综合21世纪经济报导旗下的“21金融圈”微信公众号，以及界面新闻、澎湃新闻等陆媒报导，这起案件起源自2018年5月成立的
+  <span href="https://www.secretchina.com/news/gb/tag/PlusToken" target="_blank">
+   PlusToken
   </span>
-  实施限制，财新网引述美国半导体专业人士分析，这不是最坏的情况，最坏的情况是直接上“实体清单”，“终端军用”的认定只影响纳入名单的美国设备和软件的供应，而“实体清单”会打击所有使用美国的产品和服务。
+  平台，涉及参与人员200余万人，层级关系多达3292层，被称为“币圈第一大案”。
   <span id="hideid" name="hideid" style="color:red;display:none;">
    <span href="https://www.secretchina.com">
    </span>
   </span>
  </p>
  <p>
-  但是，中芯国际用于芯片代工的设备和材料都离不开
-  <span href="https://www.secretchina.com/news/gb/tag/美国" target="_blank">
-   美国
+  据报导，江苏省盐城市中级法院9月22日一审时以组织、领导传销活动罪判处陈姓、丁姓、彭姓等16名被告2年至11年不等的有期徒刑，并处罚金，涉案赃物、赃款及孳息、犯罪工具依法予以没收上缴。
+ </p>
+ <p>
+  报导指出，中国最高法院旗下的中国裁判文书网11月26日公布盐城中院
+  <span href="https://www.secretchina.com/news/gb/tag/二审" target="_blank">
+   二审
   </span>
-  厂商，就算只是被纳入“终端军用”的限制令，中芯国际的先进工艺研发进程也将遭到严重打击。前述专业人士指出，如此一来，中芯国际将难以继续先进工艺的业务，“14纳米工艺会很困难，其次是28纳米和40纳米……”
+  刑事裁定书，本案驳回上诉，维持一审原判。
  </p>
  <p>
-  中芯国际表示正对美国进一步限令进行评估，并表示将继续与美方沟通。但有分析指出，中芯国际遭美进一步限制，影响严重，且距离列入黑名单仅一步之遥。中芯遭禁，不仅涉及中芯国际自身的生存，还会严重打击中国发展半导体产业的规划，而半导体产业是中国制造2025的重要部分。
+  裁定书显示，本案扣押的加密货币依法处理，所得资金及收益，以及其它冻结、扣押资金5067.91亿元，均予以没收上缴。
  </p>
  <p>
-  北京当局原本希望到2025年，中国使用的所有计算机芯片，本土生产的提升到70%，目前这一比例大约只有16%。
+  案件涉及比特币、比特现金、达世币、狗狗币、莱特币、以太坊、柚子币、瑞波等8种虚拟货币。
  </p>
  <p>
-  中国自身芯片需求强劲，但中兴集团前年首遭美国制裁后，中国在芯片技术方面的严重滞后呈现出来。美国则于五月份对
-  <span href="https://www.secretchina.com/news/gb/tag/华为" target="_blank">
-   华为
-  </span>
-  集团下达禁令，华为已经很难在全球范围获得芯片，中方由此希望加快降低芯片产业对外依赖的程度，中芯国际年内两次获得巨额注资，也显示北京对本土芯片企业扶植的力度，现在中芯国际再遭限制，中国国内芯片研发更是雪上加霜。一方面北京被迫面临芯片全产业链自主研发的困难处境，一方面芯片行业门槛极高，北京想在短期内实现技术突破似乎不可能。
- </p>
- <p>
-  <span href="https://www.secretchina.com/news/gb/tag/习近平" target="_blank">
-   习近平
-  </span>
-  多次讲话强调科技突破，不再受制于人，今年7月更提出“国内大循坏”为主体计划，核心的内容就是科技自主和依靠内需。国内大循坏为主计划，被指一则有重锁国门店倾向，且不现实；二则远水解不了近渴。
+  经盐城市物价局价格认定中心认定，以2018年5月1日至2019年6月27日期间最低价计算，上述8种数位货币折合达148亿元。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -90,7 +82,7 @@
   </div>
  </center>
  <p>
-  中国的企业在呼唤着本土芯片，但是，阿里巴巴创始人马云日前表示，中国的芯片比国际落后二十年。因此还需要一个长时间的努力。
+  综合上述金额，没收金额初估约5215.91亿元。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -105,21 +97,7 @@
   </div>
  </center>
  <p>
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  （文章来源：法广RFI）
+  裁决书也显示，查封在案的以赃款购买房产17套、汽车3辆，依法予以拍卖，抵作退赃款，同样予以没收上缴。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -151,7 +129,7 @@
   ，就可以助力我们突破审查与封锁，向至少10000位中国大陆同胞奉上独立真实的关键资讯，在危难时刻向他们发出预警，救他们于大瘟疫与其它社会危难之中。
   <center>
    <span href="https://account.secretchina.com/planshopcart.php?pid=2020plana&amp;carf=add&amp;code=b5">
-    <img src="/kzgd/ad/join_membership_728x90.jpg" width="100%"/>
+    <img src="/kzgd/ad/kzgad202010728.gif" width="100%"/>
    </span>
   </center>
   <center>
@@ -183,13 +161,13 @@
 
 <hr/>
 手机上长按并复制下列链接或二维码分享本文章：<br/>
-https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/948230.md <br/>
-<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/948230.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/948230.md.png'/></a> <br/>
-原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/10/05/948230.html
+https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/954155.md <br/>
+<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/954155.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/954155.md.png'/></a> <br/>
+原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/11/29/954155.html
 
 
 ------------------------
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;|&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md) &nbsp;| [《九评共产党》](https://github.com/gfw-breaker/9ping.md/blob/master/README.md#九评之一评共产党是什么) | [《解体党文化》](https://github.com/gfw-breaker/jtdwh.md/blob/master/README.md) | [《共产主义的终极目的》](https://github.com/gfw-breaker/gczydzjmd.md/blob/master/README.md)
 
 
-<img src='http://gfw-breaker.win/banned-news3/pages/p5/948230.md' width='0px' height='0px'/>
+<img src='http://gfw-breaker.win/banned-news3/pages/p5/954155.md' width='0px' height='0px'/>
