--- a/pages/p1/954150.md
+++ b/pages/p1/954150.md
@@ -1,4 +1,4 @@
-### 禁中共党员移民拿绿卡 胡锡进翻墙呛美 民间炸锅(组图)
+### 中共宣传脱贫还要美国学习 经济学者狠酸(图)
 ------------------------
 
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;&nbsp;|&nbsp;&nbsp; [法轮功真相](https://github.com/begood0513/basic/blob/master/README.md)  &nbsp;&nbsp;|&nbsp;&nbsp; [手把手翻墙教程](https://github.com/gfw-breaker/guides/wiki)  &nbsp;&nbsp;|&nbsp;&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md)  
@@ -6,10 +6,10 @@
 
 
 <div class="article_right" style="fone-color:#000">
- <p style="text-align: center;">
-  <img alt="胡锡进 美国移民" src="https://img3.secretchina.com/pic/2020/10-4/p2789011a610910985-ss.jpg" style="height:338px; width:600px"/>
+ <p style="text-align:center">
+  <img alt="中国贫困" src="https://img2.secretchina.com/pic/2018/12-22/p2327302a313841080-ss.jpg" style="height:337px; width:600px"/>
   <br>
-   胡锡进“翻墙”在推特说，美国新移民政策有助于更多人才留在中国，此言论引发争议 。（图片来源：微博视频）
+   中国经济学者胡星斗直言中国贫困人口仍有好几亿。（图片来源：FREDERIC J. BROWN/AFP/Getty Images）
    <span id="hideid" name="hideid" style="color:red;display:none;">
     <span href="https://www.secretchina.com">
     </span>
@@ -21,57 +21,56 @@
 
 ---
 
-#### 💥 [《伪火》 - 天安门自焚真相 ](http://158.247.195.190:10000/videos/blog/weihuo.html)&nbsp; |&nbsp; [“1400例”谎言揭秘  ](http://158.247.195.190:10000/videos/blog/jiexi1400.html)
-
 #### [ 🎬  翻墙必看视频（YouTube热门频道、网站代理、时事热点、历史事件 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
+
+#### [ 💥  禁书下载（政治、经济、人权、民主自由、文革、六四 ...）](https://github.com/gfw-breaker/books/blob/master/README.md)
 
 
   </div>
  </div>
  <p>
-  【看中国2020年10月4日讯】（看中国记者黎小葵综合报导）针对美国公民及移民服务局（USCIS）2日发布政策指引，明文指出禁止共产党员申请移民，中共大外宣代言人、《环时》总编辑
+  【看中国2020年11月30日讯】（看中国记者黎小葵综合报导）中共官方23日宣布
   <strong>
-   <span href="https://www.secretchina.com/news/gb/tag/胡锡进" target="_blank">
-    胡锡进
+   中国
+  </strong>
+  832个贫困县全部“
+  <strong>
+   脱贫
+  </strong>
+  ”后，先是李克强要求地方政府“讲真话”，如今中国独立学者
+  <strong>
+   <span href="https://www.secretchina.com/news/gb/tag/胡星斗" target="_blank">
+    胡星斗
    </span>
   </strong>
-  “翻墙”在推特表示，
+  再出面狠酸，他直言中国贫困人口仍有好几亿，官方的宣传使海内外民众产生了“
   <strong>
-   美国
+   错误认知
   </strong>
-  新
-  <strong>
-   移民政策
-  </strong>
-  有助于更多人才留在中国国内。此言论引发不小争议 。
+  ”。
   <span id="hideid" name="hideid" style="color:red;display:none;">
    <span href="https://www.secretchina.com">
    </span>
   </span>
  </p>
  <p>
-  <strong>
-   胡锡进间接承认中国人想移民
-  </strong>
+  贵州省11月23日宣布辖内9个国家级贫困县正式退出贫困县序列，标志着贵州66个国家级贫困县全部实现“脱贫”。对此，央视报导称，因为贵州这9个县的脱贫，使全中国832个国家级贫困县“全部脱贫”。中共官方甚至还大话称其脱贫经验给其他国家提供启示，同时批评美国底层人民的发展失衡，生存危机加剧，更有中国学者宣称中国已脱贫，美国却有将近4000万人口生活在贫困线以下，美国应该向中国学习。
  </p>
  <p>
-  美国公民及移民服务局的通告指出，相关政策指引据美国国会通过的议案提出，以保障美国安全；除非有豁免，任何或曾是共产党及其他极权政党成员身份，只要有移民倾向的外国人，都不允许进入美国，移民局官员皆可依此新规拒绝核准其调整身分。
+  另据新华社宣传，党中央把贫困人口脱贫作为全面建成小康社会的底线任务和标志性指标，“在全国范围全面打响脱贫攻坚战，创造了人类减贫史上的奇迹。”
  </p>
  <p>
-  通告指，此新增内容，主要是开始严格执行联邦移民法的要求。也就是说，相关政策新规将阻止中共
-  <span href="https://www.secretchina.com/news/gb/tag/党员" target="_blank">
-   党员
+  对此，美国之音报导，研究中国农村与农民议题的中国经济学者胡星斗表示，中共官媒的宣传让许多中国人和外国人对于脱贫的问题产生了“
+  <span href="https://www.secretchina.com/news/gb/tag/错误认知" target="_blank">
+   错误认知
   </span>
-  在美获得绿卡或移民身份。
- </p>
- <p style="text-align: center;">
-  <img alt="美国 移民 党员" src="https://img3.secretchina.com/pic/2020/10-4/p2788611a837654234-ss.jpg"/>
-  <br>
-   美国公民及移民服务局网站的通告。（图片来源：美国公民及移民服务局网站截图）
-  </br>
+  ”。
  </p>
  <p>
-  针对美国新政策，胡锡进4日在推特表示，“中国有许多优秀人才是共产党员。美国的决定有助于让更多人才留在中国国内，因为它粉碎了他们的幻想，这不是坏事。更重要的是，如今非中国共产党党员的民众，对移民美国的兴趣也大大降低了。”
+  “中国的贫困人口肯定还非常多，如果用美国的标准来衡量，如果按照联合国或世界银行每天收入的两美金来估算，中国有好几亿的贫困人口，不是几千万的问题。”胡星斗指出，中国过去1、20年在脱贫方面是有一些成就，但中国的脱贫还是“低水平的脱贫”，并不是脱贫以后就跨入富裕或小康水准，或者达到富裕的程度。他指现在中国的贫困人口太多，按照联合国或世界银行每天收入2美元（约人民币13元）的“贫穷门槛”来衡量，中国也要有好几亿贫困人口。
+ </p>
+ <p>
+  胡星斗进一步说，而这个赤贫标准和美国所订的贫困标准根本无法相比，因为美国的贫困标准比中国高20倍，有些人以为美国的贫困人口有4000万，中国贫困才1000万，“那些说这种话的人大概很多不知道那是美国的标准，美国的贫困标准比中国的高20多倍，不是高2倍，而是20多倍。”
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -86,7 +85,7 @@
   </div>
  </center>
  <p>
-  胡锡进此话一出，立刻引发民间热议。有人酸胡的说法等于是间接承认很多中国人有“移民梦”，“这话只能证明共产党员有很多想移民美国”；也有人表示，“不意外，中国共产党就是硬撑，嘴巴死不承认。”
+  而且，中国的贫困人口，大多都是农民，但是中共1949年建政后，建立了人类历史上规模最大的奴隶制，将数亿中国农民一举变成中共政权的农奴。这些农奴必须为中共政权劳作，中共政权使他们年复一年地劳作，不给他们提供生产工具、工资、住房、衣着、医疗，甚至不给他们提供口粮。在几十年里，许多中国农民一年下来不但没有得到任何收入，甚至反而倒欠中共政权口粮钱。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -101,7 +100,7 @@
   </div>
  </center>
  <p>
-  还有网友感慨说，“到了美国变人才，留在中国成奴才。”“现在90％的清华北大的学生毕业后选择到国外读研究生。”
+  中国历史研究者宋永毅搜集的中共和中国政府内部文献显示，在中共统治下农村人很多不是饿死，而是被打死，因为他们不肯放弃自己和家人可以用来活命的口粮就遭地方官员活活打死。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -116,7 +115,7 @@
   </div>
  </center>
  <p>
-  另有网友直言，“赶紧退党、退团、退队！”
+  有批评者说，在中共1970年代末开始实行所谓的改革开放政策后，中国农民情况有所改善，获得了有限的迁徙自由，可以前往城市打工，但他们到城市打工的一个先决条件是中共政权可以对他们任意召之即来，挥之即去。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -131,9 +130,7 @@
   </div>
  </center>
  <p>
-  <strong>
-   80万留学生归国就业受挑战
-  </strong>
+  比较典型的案例是，北京当局2017年11月底开始将大批到北京打工的农民工从合法租住的居所驱赶到大街上，把他们驱赶出北京。随后，中国其他城市也跟北京学习，驱赶当地农民工。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -148,7 +145,22 @@
   </div>
  </center>
  <p>
-  此外，值得一提的是，若按胡锡进的这种言论发展，更多“人才”留在中国，中国就业市场将受到严峻挑战。
+  还有批评者指出，中共虽然靠“农民革命”在大陆夺取政权，但在掌权之后对农民的歧视却始终一贯，至今没有根本性改变。在这方面最明显的例子就是教育。中国的教育资源大都集中在大城市，中共政府忽视农民子女的教育，农场也得不到多少国家资源。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  比如，在大陆高考时，来自农村地区的考生不但不能因国家造成的不利条件受到补偿，反受到进一步歧视，他们报考同样的高等学校考分还要比大城市的考试生高很多才能被录取。同时，中共当局还严禁来自农村地区的学生到城市上学或参加高考，也禁止农民自己办学给农村子弟提供教育，把农工建造的学校封闭，甚至夷为平地。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -167,7 +179,7 @@
   </ins>
  </center>
  <p>
-  众所周知，受武肺疫情及就业移民政策收紧双重影响，目前大批中国留学生已回国。中国教育平台“UniCareer”9月发布的《2020海归就业力调查报告》显示，今年前8个月归国求职的留学生暴增7成，达80万；近4成海归年薪不足10万元。
+  迄今为止，相关话题在民间仍讨论火热。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -182,7 +194,7 @@
   </div>
  </center>
  <p>
-  报告还指出，这些海归超过6成即将取得最高学历硕士，其次是本科和博士学历，他们中有88.1%的人能在归国半年内找到工作；12.8%的人原本认为自己应该拿到30万元以上年薪，但实际拿到的仅占5%。
+  网友们纷纷表示，“看到为了这次脱贫，（共产党）又把贫困线画回2010年的标准，年收入2300RMB（人民币），月收入191RMB。”“脱贫不等于小康啊，我们的认知是这样，因为需要累积资本，改善生活环境，一个失误或意外很有可能返贫，但中共的宣传好像脱贫等于你已经小康了，接下来就让你自生自灭了。”“一天收入1.9美元，换算成RMB （人民币）是年收入4161元，中共自己的贫困线，现在是年收入2300元，去年的贫困线标准还比较高在3747元左右，当你月收入只有191RMB，再除于30是一天可以花6块多，你吃三餐，住房交水电，外出坐公车，买衣服，看病够吗？”
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -197,7 +209,7 @@
   </div>
  </center>
  <p>
-  因此，《苹果日报》此前披露，近来出现留美中国移民和留学生纷纷退党的现象，如透过登报方式证明退出共产党及其相关组织，以此方式希望继续留在美国。
+  也有网友嘲讽说，“这便是‘共产党’ 的优越性...说了‘小康’ 那便是‘小康’ ...‘大康’ 跟‘小康’ 由大佬决定!”“中国式阶级论。”“灭贫，即消灭贫穷的人？”“灭贫最快的方法，杀。”
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -212,7 +224,7 @@
   </div>
  </center>
  <p>
-  据海外退党网站数据显示，截止北京时间2020年10月4日，全球公开声明“退党、退团、退队”的中国人，已达3亿6489万1604人。
+  公开资料显示，美国贫困线的标准是每年收入低于11880美元的家庭，才被列为贫困家庭（约人民币80000左右）。而这个标准只在美国最繁华的城市旧金山适用。在美国大部分的地区，一个四口之家如果年收入达到11000美元，其实可以过上非常舒适的生活。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -244,7 +256,7 @@
   ，就可以助力我们突破审查与封锁，向至少10000位中国大陆同胞奉上独立真实的关键资讯，在危难时刻向他们发出预警，救他们于大瘟疫与其它社会危难之中。
   <center>
    <span href="https://account.secretchina.com/planshopcart.php?pid=2020plana&amp;carf=add&amp;code=b5">
-    <img src="/kzgd/ad/join_membership_728x90.jpg" width="100%"/>
+    <img src="/kzgd/ad/kzgad202010728.gif" width="100%"/>
    </span>
   </center>
   <center>
@@ -276,13 +288,13 @@
 
 <hr/>
 手机上长按并复制下列链接或二维码分享本文章：<br/>
-https://github.com/gfw-breaker/banned-news3/blob/master/pages/p1/948197.md <br/>
-<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p1/948197.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p1/948197.md.png'/></a> <br/>
-原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/10/04/948197.html
+https://github.com/gfw-breaker/banned-news3/blob/master/pages/p1/954150.md <br/>
+<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p1/954150.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p1/954150.md.png'/></a> <br/>
+原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/11/30/954150.html
 
 
 ------------------------
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;|&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md) &nbsp;| [《九评共产党》](https://github.com/gfw-breaker/9ping.md/blob/master/README.md#九评之一评共产党是什么) | [《解体党文化》](https://github.com/gfw-breaker/jtdwh.md/blob/master/README.md) | [《共产主义的终极目的》](https://github.com/gfw-breaker/gczydzjmd.md/blob/master/README.md)
 
 
-<img src='http://gfw-breaker.win/banned-news3/pages/p1/948197.md' width='0px' height='0px'/>
+<img src='http://gfw-breaker.win/banned-news3/pages/p1/954150.md' width='0px' height='0px'/>
