--- a/pages/nf4514/n12582938.md
+++ b/pages/nf4514/n12582938.md
@@ -5,9 +5,9 @@
 
 
 
-<div><img alt="【大选更新11.29】川普考虑任命特别检察官" class="attachment-djy_600_400 size-djy_600_400 wp-post-image" src="https://i.epochtimes.com/assets/uploads/2020/11/GettyImages-1287973454-600x400.jpg"/>
+<div><img alt="【大选更新11.29】川普拟任命特别检察官" class="attachment-djy_600_400 size-djy_600_400 wp-post-image" src="https://i.epochtimes.com/assets/uploads/2020/11/GettyImages-1287973454-600x400.jpg"/>
 <div class="caption">
- 最新民调显示，川普在今天大选西语人群中的得票大幅增加。图为来自佛州的选民在挺川集会上。（施萍／大纪元）
+ 图为2020年11月26日，美国总统川普在感恩节当天的白宫外交厅发表讲话。（Erin Schaff - Pool/Getty Images）
 </div></div><hr/>
 
 #### [ 🎬  翻墙必看视频（YouTube热门频道、网站代理、时事热点、历史事件 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
