--- a/pages/p3/954190.md
+++ b/pages/p3/954190.md
@@ -1,4 +1,4 @@
-### 见证中共邪恶政权各种谎言 宋庆龄悔不当初(图)
+### 悉尼东京相继举行挺川普活动 谴责左媒(图)
 ------------------------
 
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;&nbsp;|&nbsp;&nbsp; [法轮功真相](https://github.com/begood0513/basic/blob/master/README.md)  &nbsp;&nbsp;|&nbsp;&nbsp; [手把手翻墙教程](https://github.com/gfw-breaker/guides/wiki)  &nbsp;&nbsp;|&nbsp;&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md)  
@@ -7,14 +7,11 @@
 
 <div class="article_right" style="fone-color:#000">
  <p style="text-align:center">
-  <img alt="宋庆龄与毛泽东和邓小平在苏联莫斯科。" src="https://img3.secretchina.com/pic/2020/11-18/p2820632a427062478-ss.jpg"/>
-  <br>
-   见证中共独裁政权各种谎言，宋庆龄悔不当初。图为宋庆龄与毛泽东和邓小平在苏联莫斯科。（图片来源：公有领域）
-   <span id="hideid" name="hideid" style="color:red;display:none;">
-    <span href="https://www.secretchina.com">
-    </span>
+  <img alt="东京挺川普活动" src="https://img3.secretchina.com/pic/2020/11-30/p2828671a418247022-ss.jpg" style="height:549px; width:388px"/>
+  <span id="hideid" name="hideid" style="color:red;display:none;">
+   <span href="https://www.secretchina.com">
    </span>
-  </br>
+  </span>
  </p>
  <div id="txt-mid1-t21-2017">
   
@@ -29,46 +26,93 @@
   </div>
  </div>
  <p>
-  1949年，
-  <span href="https://www.secretchina.com/news/gb/tag/蒋介石" target="_blank">
-   蒋介石
-  </span>
-  和宋家姐妹轮番劝
+  【看中国2020年11月30日讯】自11月14日在美国首都华盛顿开启了“停止偷窃”挺
   <strong>
-   宋庆龄
+   <span href="https://www.secretchina.com/news/gb/tag/川普" target="_blank">
+    川普
+   </span>
+   (特朗普)
   </strong>
-  离开大陆，宋拒绝了，留下了与推翻丈夫政权的人合作，匪夷所思，除了开始那几年的尊重，宋更多的是被冷落，被当做政治花瓶点缀，宋见证了这个独裁政权的各种谎言与荒诞，心中的苦闷是不能言说的。1994年11月，
+  民众自发大游行以来，类似的挺川活动已蔓延到澳洲
   <strong>
-   中共
+   悉尼
   </strong>
-  书记处审查通过了党史编委会整理的关于宋庆龄1949年后32年经历的材料。
+  和日本
+  <strong>
+   东京
+  </strong>
+  。
   <span id="hideid" name="hideid" style="color:red;display:none;">
    <span href="https://www.secretchina.com">
    </span>
   </span>
  </p>
  <p>
-  这份材料的内容提要如下：
+  美国总统大选因民主党候选人拜登一方涉大规模舞弊而进入司法战，而美国很多“主流”媒体却罔顾民意册封拜登为下届总统，并企图掩盖大选中的大规模造假事实，有些“主流”媒体甚至造谣称川普团队因不甘心选举失败，为了推翻选举结果而进行司法战。
  </p>
  <p>
-  1955年11月，宋给毛写信：“我很不理解提出对工商业的改造，
-  <span href="https://www.secretchina.com/news/gb/tag/共产党" target="_blank">
-   共产党
+  为了维护美国的民主体制根基，彰显正义，支持现任总统川普，谴责舞弊的一方，美国民众率先在首都华盛顿开启了“停止偷窃”的支持川普游行活动。而之后的周末，在美国各地都有类似的挺川游行活动。随着大选舞弊调查的深入，背后参与美国大选舞弊的几个国家也浮出水面，中共黑手参与操纵美国大选，企图扶持拜登一方窃得美国总统大位的惊天阴谋也被曝光。
+ </p>
+ <p>
+  美国是全世界民主国家的灯塔，如果美国的民主体制被社会主义中共极权侵蚀，势必会影响到其他民主体制的国家。虽然全世界的左翼媒体都在掩盖拜登作弊的事实，但民心所向，民意难违，远在澳洲和日本的正义人士们，分别在自己的国家举行了支持川普，停止盗窃的游行活动。
+ </p>
+ <p>
+  11月21日，澳洲
+  <span href="https://www.secretchina.com/news/gb/tag/悉尼" target="_blank">
+   悉尼
   </span>
-  曾向工商界许下长期共存、保护工商业者利益的诺言。这样一来，不是变成自食其言了吗？资本家已经对共产党的政策产生了怀疑和恐惧，不少人后悔和抱怨。”毛批示：“宋副委员长有意见，要代表资本家讲话。”
+  民众自发组织挺川普游行，他们手中舞动着“Trump”大旗，井然有序地传过悉尼市中心，把声援信提交到美国大使馆，并在使馆前集会，集体为美国和川普总统祈祷。
  </p>
  <p>
-  1957年宋又
-  <span href="https://www.secretchina.com/news/gb/tag/写信" target="_blank">
-   写信
+  据“新唐人电视台”当天的采访报道，悉尼川普支持者（Samraat Joshua Grewal)称，川普并不是左翼媒体称的种族主义者，相反他团结所有不同的人，他所做的一切是为了打击腐败，打击那些操纵选举，财力雄厚的科技巨头，权贵和大政客，他在寻求建立一个公平的美国。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  这次悉尼挺川普活动的发起人（George Jameson)说：“川普总统就是当今的肯尼迪，或是马丁.路德.金，这么伟大的治国领袖难得见到，我们能活在这个时代见证这一切真是非常荣幸”。他称川普反对战争，致力于世界和平，全世界的人们都应该站出来支持川普总统。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p style="text-align: center;">
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  日本
+  <span href="https://www.secretchina.com/news/gb/tag/东京" target="_blank">
+   东京
   </span>
-  给党中央：“党中央号召大鸣大放，怎么又收了？共产党不怕国民党八百万大军，不怕美帝国主义，怎么会担心人民推翻党的领导和人民政府？共产党要敢于接受各界人士的批评，批评人士大多是爱国、爱党的，一些民主党派人士为新中国的解放，作出了家庭、个人名利的牺牲，一些二、三十岁的青年知识分 子怎么可能一天就变成反党反社会主义分子？我很不理解这个运动，我想了两个多月，还是想不通，有这么多党内党外纯粹的人会站在共产党和人民政府的对立面？要推翻共产党？”
- </p>
- <p>
-  从1958年起，宋曾推病拒绝参加人大常委会。党中央委派刘少奇、周恩来、董必武去做工作，宋只得继续参加。1959年4月，宋在人大被推举为国家副主席。宋先后两次推辞：“我是落伍了，思想跟不上，才挂个名，作个样子，对国家不利。”提议由李富春或乌兰夫担任。
- </p>
- <p>
-  宋任国家副主席，是刘少奇、董必武、林伯渠、李富春提议的，政治局讨论时，21人中18人赞成，3人反对，反对者是：毛、林彪、康生。当时毛发言：“宋是我们民主革命时期的同路人，在社会主义革命时期，她和我们就走不到一起了。从不赞成我们的方针路线到反对我们的方针路线。我们同她是不同的阶级。”
+  这几天都有挺川普游行活动，在周日（29日）下午的挺川普游行队伍中，人们高喊“拜登当权中国就赢了”。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -83,7 +127,7 @@
   </div>
  </center>
  <p>
-  文革期间，宋先后给毛和党中央写了七封信，表达了她对“文革”的不理解、反感，并对共产党极度失望。1967年8月、1969年11月、1976年6月，宋曾三次产生厌世思想，在信中以及对来探望她的领导人的谈话中流露出对自己所选择的道路感到怅惘和说不出的苦闷。
+  挺川人士下午2:00在东京日比谷公园中辛门集合，举行“挺川普连任美国总统游行活动”。他们在推特上发文指责美国左翼媒体企图用假讯息造成既定事实，推拜登上美国总统大位，也谴责了日本的左派媒体跟著作恶。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -98,7 +142,11 @@
   </div>
  </center>
  <p>
-  七封信中说：“我不懂文化，说小说都是政治，而且都是毒草，我糊涂了，一夜天下来，一些和我一起工作的同事都变成了走资派、反党集团、野心家、牛鬼蛇神。中央要我学习批判揭发刘少奇，我不会作的，刘少奇主席在党中央工作了三、四十年，今天会是叛徒、内奸！我不相信，一个叛徒内奸当了七年的国家主席，现在宪法还有效吗？怎么可以乱抓人、乱斗人、逼死人？党中央要出来讲话。这种无法无天的情况，自己伤害自己的同志、人民，是罪行。我们的优秀干部从与国民党的战斗中走过来，却死在自己的队伍中，这是什么原因？”
+  本月25日在东京游行的人士也打出了“拜登当权
+  <span href="https://www.secretchina.com" target="_blank">
+   中国
+  </span>
+  就赢了”的横幅，支持川普人士称拜登上位对日本非常不利。美国保守派媒体OAN报导，东京游行人士指责美国主流媒体故意忽略民主党选举舞弊事实，远在日本的民众还比美国选民的消息灵通。游行人士主张，川普必须连任，才能确保亚太和平与美日关系的紧密连结。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -113,22 +161,7 @@
   </div>
  </center>
  <p>
-  1970年3月，毛对周恩来说：“她不愿意看到今天的变化，可以到海峡对岸，可以去香港、去外国，我不挽留。”并指示周恩来、李先念把他的话传达给宋。传达时他们说：“主席很关心你，知道你的心情不怎么好，建议你到外面散散心，休息休息。”宋说：“是否嫌我还在？我的一生还是要在这块土地上，走完最后几步。”于是宋推病拒绝出席一些节日活动和招待会，说：“我参加会伤感，还是不参加，参加一次，回来就要进医院。另外，我也不想做政治上的点缀。”
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  1980年11月，宋给党中央写了她一生中最后的一封信：“一、国家要振兴，恢复元气，这是一次大好时机。二、要总结建国以来政治运动对国家对人民造成的创伤。三、请不要把我和国父放在一起，我不够格的。”
+  挺川普人士福山高雄（Takao Furuyama，）表示：“我们今天在东京举行游行，以行动力挺川普总统，美国大选公平很重要，对于我们来说，更重要的是这会影响到日本的安宁与全世界的和平。”
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -192,13 +225,13 @@
 
 <hr/>
 手机上长按并复制下列链接或二维码分享本文章：<br/>
-https://github.com/gfw-breaker/banned-news3/blob/master/pages/p6/904686.md <br/>
-<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p6/904686.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p6/904686.md.png'/></a> <br/>
-原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/11/26/904686.html
+https://github.com/gfw-breaker/banned-news3/blob/master/pages/p3/954190.md <br/>
+<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p3/954190.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p3/954190.md.png'/></a> <br/>
+原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/11/30/954190.html
 
 
 ------------------------
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;|&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md) &nbsp;| [《九评共产党》](https://github.com/gfw-breaker/9ping.md/blob/master/README.md#九评之一评共产党是什么) | [《解体党文化》](https://github.com/gfw-breaker/jtdwh.md/blob/master/README.md) | [《共产主义的终极目的》](https://github.com/gfw-breaker/gczydzjmd.md/blob/master/README.md)
 
 
-<img src='http://gfw-breaker.win/banned-news3/pages/p6/904686.md' width='0px' height='0px'/>
+<img src='http://gfw-breaker.win/banned-news3/pages/p3/954190.md' width='0px' height='0px'/>
