--- a/pages/p8/954145.md
+++ b/pages/p8/954145.md
@@ -1,4 +1,4 @@
-### 夏天吹冷气 几度最健康？(图)
+### “男不娶五 女不嫁六”你是其中之一吗？(组图)
 ------------------------
 
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;&nbsp;|&nbsp;&nbsp; [法轮功真相](https://github.com/begood0513/basic/blob/master/README.md)  &nbsp;&nbsp;|&nbsp;&nbsp; [手把手翻墙教程](https://github.com/gfw-breaker/guides/wiki)  &nbsp;&nbsp;|&nbsp;&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md)  
@@ -7,83 +7,104 @@
 
 <div class="article_right" style="fone-color:#000">
  <p style="text-align: center;">
-  <strong>
-   <img alt="" src="https://img3.secretchina.com/pic/2020/7-27/p2741512a842498758-ss.jpg"/>
-   <br>
-    夏天
-   </br>
-  </strong>
-  吹
-  <strong>
-   冷气
-  </strong>
-  ，几度最健康？（图片来源：Adobestock）
-  <span id="hideid" name="hideid" style="color:red;display:none;">
-   <span href="https://www.secretchina.com">
+  <img alt="婚姻 妻子 丈夫 孝顺" src="https://img3.secretchina.com/pic/2020/1-30/p2615792a550608035-ss.jpg" style="height:337px; width:600px"/>
+  <br>
+   “男不娶五，女不嫁六”你是其中之一吗？（以下图片来源皆为Adobestock）
+   <span id="hideid" name="hideid" style="color:red;display:none;">
+    <span href="https://www.secretchina.com">
+    </span>
    </span>
-  </span>
+  </br>
  </p>
  <div id="txt-mid1-t21-2017">
   
 
 ---
 
-#### 💥 [《伪火》 - 天安门自焚真相 ](http://141.164.39.94:10000/videos/blog/weihuo.html)&nbsp; |&nbsp; [“1400例”谎言揭秘  ](http://141.164.39.94:10000/videos/blog/jiexi1400.html)
+#### [ 🎬  翻墙必看视频（YouTube热门频道、网站代理、时事热点、历史事件 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
 
-#### [ 🎬  翻墙必看视频（八九六四、法轮功、709大抓捕、香港反送中 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
-
-#### 网站代理：[大纪元新闻网](http://167.172.10.89:10080/gb/) &nbsp;|&nbsp; [新唐人电视台](http://167.172.10.89:8808/gb/) &nbsp;|&nbsp; [YouTube热门频道](http://158.247.203.241/youtube.html)
-
-#### 💥 [九评共产党](http://141.164.39.94:10000/videos/res/jiuping/)&nbsp; |&nbsp; [漫谈党文化](http://141.164.39.94:10000/videos/res/mtdwh/)&nbsp; |&nbsp; [共产主义的终极目的](http://141.164.39.94:10000/videos/res/zjmd/)&nbsp; |&nbsp; [魔鬼在統治著我們的世界](http://141.164.39.94:10000/videos/res/TheSpecter/)  
-
-#### [ 🔥  明居正教授：中共恶劣！中国人奴性强？中共利用中国人处境洗脑杀人](http://141.164.39.94:10000/videos/news/mjz01.html)
-
-#### [ 🔥  【视频】7月26日 湖北建始洪水滚滚 发最高级防汛响应](http://141.164.39.94:10000/videos/news/../warning/index.html)
-
-#### [ 🔥  《九评共产党》之五 - 评江泽民与中共相互利用迫害法轮功](http://141.164.39.94:10000/videos/news/../res/jiuping/5.html)
+#### [ 💥  禁书下载（政治、经济、人权、民主自由、文革、六四 ...）](https://github.com/gfw-breaker/books/blob/master/README.md)
 
 
   </div>
  </div>
  <p>
-  现在在北半球，许多地方早已进入炎热的
-  <span href="https://www.secretchina.com/news/gb/tag/夏天" target="_blank">
-   夏天
-  </span>
-  ，很多人也因此离不开冷气。而在开冷气的时候，不少人总习惯将冷气调到26℃，认为这温度比较舒适，也比较
   <strong>
-   省电
+   <span href="https://www.secretchina.com/news/gb/tag/婚姻" target="_blank">
+    婚姻
+   </span>
   </strong>
-  。但这样的想法是正确的吗？
+  可说是每个人一辈子的人生大事。对男人而言，娶个好
+  <strong>
+   妻子
+  </strong>
+  ，可保家庭和睦，事业更上层楼；反之不但婚姻难长久，可能家庭也会乌烟瘴气。同样的道理，女人选择
+  <strong>
+   丈夫
+  </strong>
+  也是很重要的，俗话也说“男怕入错行，女怕嫁错郎”，一旦嫁错人，有可能一辈子就难以幸福。
   <span id="hideid" name="hideid" style="color:red;display:none;">
    <span href="https://www.secretchina.com">
    </span>
   </span>
  </p>
  <p>
+  那么在以前的人眼中，男女的择偶标准是怎样的呢？当然各地也有不同的说法，今天就来为大家介绍一句跟婚姻有关的俗语“男不娶五，女不嫁六”，这句俗语也有另一种说法“男有五不娶，女有六不嫁”。已经结婚或正在找对象的读者们，快来看看你是不是其中之一。
+ </p>
+ <p>
   <strong>
-   ●26℃
-   <span href="https://www.secretchina.com/news/gb/tag/省电" target="_blank">
-    省电
+   ●男不娶五
+  </strong>
+ </p>
+ <p>
+  这话是古人流传下来的俗语，它的意思也不难理解，就是劝诫正在找对象，准备步入婚姻的男女，分别有几种对象要尽可能避开。当然这只是以前的人们经过多年的经验所总结的经验谈，并不一定准确。毕竟婚后如何相处才是重点，但毕竟还是有一定的参考价值，所以也值得时下男女借监。
+ </p>
+ <p>
+  对男人而言，娶妻不光是两个人的事情，娶妻也是两个家庭的事情，所以在古代媒人在促成一对佳人时，除了重视双方的生辰八字外，也会重视女方以下五个方面：
+ </p>
+ <p>
+  <strong>
+   1
+  </strong>
+  <strong>
+   、不
+   <span href="https://www.secretchina.com/news/gb/tag/孝顺" target="_blank">
+    孝顺
    </span>
-   又舒适？
   </strong>
  </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
  <p>
-  一般而言，白天时把
-  <span href="https://www.secretchina.com/news/gb/tag/冷气" target="_blank">
-   冷气
-  </span>
-  开到24℃～27℃是最舒适的。但到了晚上睡觉时，冷气再开26℃就不合适了，因为在晚上的温度，会有一到三个不同降温的体感。
+  不能孝顺父母的人，是万万不能娶的。百善孝为先，父母可说是家庭的根基，一个对父母都不能孝顺的女人，那么还是尽量不要娶进门，否则日后矛盾只会更多。
  </p>
- <p>
-  在晚上10～12点时，人体因为还在活动阶段，体温较高，所以冷气设在26℃是十分舒适的。但到了晚上2～3点时，身体已进入睡眠状态，体温也会下降些，这时再开26℃就常常会感觉到冷了。
- </p>
- <p>
-  等到了凌晨4～6点这段期间，很多人就会感觉到冷得不行，所以晚上冷气开26℃，并不适合睡觉的。
- </p>
- <p>
-  经过研究，一般晚上睡觉的时候，冷气开到28℃，可说是最舒适的也是最省电的，因为这温度不高不低，就算睡觉没盖被子也不会着凉和得冷气病，所以在晚上时，开28℃是最适宜的。
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p style="text-align: center;">
+  <img alt="不能孝顺父母的人，是万万不能娶的。" src="https://img3.secretchina.com/pic/2020/4-28/p2679722a217637399-ss.jpg"/>
+  <br>
+   不能孝顺父母的人，是万万不能娶的。
+  </br>
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -99,7 +120,10 @@
  </center>
  <p>
   <strong>
-   ●28℃更省电？
+   2
+  </strong>
+  <strong>
+   、不讲理
   </strong>
  </p>
  <center>
@@ -115,22 +139,7 @@
   </div>
  </center>
  <p>
-  大家都知道，冷气温度调越低，耗电量就越多。当冷气在制冷时，温度设定每高1℃，至少可省电10%以上，只是人体几乎察觉不到这微小的差别。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  当然另外也有省电的方法，就是定时功能。一般在睡觉时“定时”两三个小时即可。如果实在怕温度太高，晚上睡觉时还可以把冷气设为“睡眠”状态，这样还可以达到20%的省电效果哦。
+  不讲理的女人不能娶，因为夫妻过日子讲究举眉齐案，相敬如宾。若不幸娶到一个蛮横不讲理的女人，那么这个男人的婚姻生活也不会过的多幸福。平常在外面为了生活劳累奔波，到了家里还要忍受一肚子的窝囊气。这样的日子一定鸡飞狗跳，难以长久。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -146,68 +155,11 @@
  </center>
  <p>
   <strong>
-   ●冷气开开关关最耗电
+   3
   </strong>
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  吹冷气时，千万记得不要频繁开关，否则不但耗电还容易造成损坏。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  正确的做法是刚开机时，把冷气设置到高冷状态，尽快降温，等温度适宜时，就调到中、低风，这样可以减少耗电。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  虽然待在冷气房里会让人感到凉爽，但时间一久，也容易出现一些问题。比如鼻塞、流鼻涕、喉咙干痒、关节酸痛以及头晕、头痛、食欲不振、全身无力等症状，也就是大家所说的冷气病。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  当然“冷气病”并不是一个医学上的名称，而是社会学诊断的病名，主要是指由冷气引发的疾病。
+  <strong>
+   、爱占便宜
+  </strong>
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -223,8 +175,93 @@
  </center>
  <p>
   <strong>
-   ●为什么会出现冷气病？
+   4
   </strong>
+  <strong>
+   、自私
+  </strong>
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  <strong>
+   5
+  </strong>
+  <strong>
+   、钻牛角尖
+  </strong>
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  以上这三种女人也要小时，因为成家是为了过日子，若一个女人消费无节制，花钱大手大脚的，那么一旦收支不平衡，就会为家庭带来很大的困扰。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  贫贱夫妻百事哀，当一个女人物质欲望很强烈的话，那这人也难以抵挡钱财的诱惑，个性也会较为贪小便宜，甚至自私为己。若遇事还喜欢钻牛角尖，那么日后家庭气氛要想和睦，也不是件易事。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  <strong>
+   ●女不嫁六
+  </strong>
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  说完男人五不娶后，我们再来谈谈女人不能嫁给哪六种男人吧。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -243,10 +280,7 @@
    1
   </strong>
   <strong>
-   、空气
-   <span href="https://www.secretchina.com/news/gb/tag/干燥" target="_blank">
-    干燥
-   </span>
+   、不孝顺
   </strong>
  </p>
  <center>
@@ -262,7 +296,25 @@
   </div>
  </center>
  <p>
-  因为冷气吹的风较干燥，皮肤长时间暴露在这样的环境中，会流失大量水分，进而出现皮肤干燥发痒、眼睛干涩等情况。
+  中国人重视孝道，因此这也成为许多男女在选择婚姻时的重要标准。连自己父母都不能孝顺的男人，你觉得他会对你有多好呢？
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p style="text-align: center;">
+  <img alt="中国人重视孝道，因此这也成为许多男女在选择婚姻时的重要标准。" src="https://img3.secretchina.com/pic/2020/8-22/p2760482a810038236-ss.jpg"/>
+  <br>
+   中国人重视孝道，因此这也成为许多男女在选择婚姻时的重要标准。
+  </br>
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -278,7 +330,10 @@
  </center>
  <p>
   <strong>
-   2、冷热刺激
+   2
+  </strong>
+  <strong>
+   、不进取
   </strong>
  </p>
  <center>
@@ -294,7 +349,7 @@
   </div>
  </center>
  <p>
-  吹冷气时，通常与室外的温差极大，期间若频繁进出，会造成人体的生物节律及自主神经功能紊乱。例如毛孔、毛细血管遇冷会收缩，导致流鼻涕、感冒；或是毛孔无法及时打开，造成中暑或喉咙痛、鼻塞等。
+  人穷不可怕，可怕的是一个男人不求上进又特别懒惰。这样的男人一定没有担当，不会顾家，想期望他养家餬口是件很困难的事。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -317,7 +372,7 @@
    3
   </strong>
   <strong>
-   、微生物滋生
+   、好赌
   </strong>
  </p>
  <center>
@@ -333,7 +388,7 @@
   </div>
  </center>
  <p>
-  由于冷气内部叶片和滤网，非常容易堆积灰尘，同时滋生细菌、霉菌和螨虫。这些微生物会攻击鼻腔和咽喉和皮肤，所以易造成呼吸道疾病和皮肤病，以及诱发自身疾病（哮喘、鼻炎、皮炎等）。
+  嗜赌之人最可怕，即使有金山银山，只要嗜赌，那么终有一天会坐吃山空。虽说十赌九输，但现实生活中，因为沉迷赌博导致倾家荡产、妻离子散的例子比比皆是。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -349,7 +404,10 @@
  </center>
  <p>
   <strong>
-   ●如何预防冷气病？
+   4
+  </strong>
+  <strong>
+   、喜欢施暴
   </strong>
  </p>
  <center>
@@ -365,7 +423,7 @@
   </div>
  </center>
  <p>
-  记得冷气先开一会儿再关窗，而且使用冷气时，必须注意通风，让室内保持一定的新鲜空气。
+  这种有暴力倾向的男人不能嫁，婚前把你捧上天，婚后却对你拳打脚踢，而且有一就有二，无三不成礼。嫁给这样的男人也很难幸福。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -380,7 +438,12 @@
   </div>
  </center>
  <p>
-  室内温度最好控制在25℃左右，室内外温差差距不宜超过7℃；冷风出口处也不要直接对着人和办公桌。
+  <strong>
+   5
+  </strong>
+  <strong>
+   、招花惹草
+  </strong>
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -395,7 +458,7 @@
   </div>
  </center>
  <p>
-  若从外面进入冷气房时，倘若大汗淋漓，也切记不要直接吹冷风，否则降温太快，容易造成身体不适易发病。
+  花心的男人不能嫁，因为这样的男人婚后还是很难收敛，时间一久就又会故态复萌，绯闻不断，家庭会因此破裂。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -410,7 +473,12 @@
   </div>
  </center>
  <p>
-  同时不要在开冷气的室内抽烟，不然会使空气质量变得更差。词于冷气房较密闭，空气更新较慢，就会一直积累香烟中的尼古丁、一氧化碳等气体。时间一久就会影响自己和他人的身体健康。
+  <strong>
+   6
+  </strong>
+  <strong>
+   、小心眼
+  </strong>
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -425,7 +493,7 @@
   </div>
  </center>
  <p>
-  另外冷气最少每年要进行一次彻底清洁，尤其是每年进入夏季，准备启动冷气时，一定要深度清洗一次。在使用时，过滤网最好每半个月就清洗一次。深度清洁冷气不但可以改善使用效果，也能降能耗省电，提高制冷效率，延长冷气的使用寿命。
+  心胸狭隘的男人不能嫁，这样的男人大小事都会斤斤计较，两人的日子会过的特别累。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -439,7 +507,37 @@
    </center>
   </div>
  </center>
- <p style="margin-bottom:8px;">
+ <p>
+  当然沉浸在爱河中的男女或许对这些不在意，同时夫妻也不可能都找到完美的另一半，在过程中，互相包容忍让也是非常重要的。此外由于中国目前实施一胎化的政策，所以男女比例也严重失衡，许多打光棍的男人认为能娶到个媳妇就不错了，但这样的窘境是共产党人为造成的，而不是自然形成的男女比例。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  古人对于婚姻的经验谈，不知你是否有自己的心得体会，也欢迎在底下留言，与读者分享。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p style="margin-bottom:12px;">
   <hr style="border-top: 1px dashed  ;" width="100%"/>
   <br/>
   【诚征荣誉会员】溪流能够汇成大海，小善可以成就大爱。我们向全球华人诚意征集万名
@@ -457,7 +555,7 @@
   ，就可以助力我们突破审查与封锁，向至少10000位中国大陆同胞奉上独立真实的关键资讯，在危难时刻向他们发出预警，救他们于大瘟疫与其它社会危难之中。
   <center>
    <span href="https://account.secretchina.com/planshopcart.php?pid=2020plana&amp;carf=add&amp;code=b5">
-    <img src="https://img3.secretchina.com/pic/2020/7-21/p2736951a334373943.jpg" width="300px"/>
+    <img src="/kzgd/ad/kzgad202010728.gif" width="100%"/>
    </span>
   </center>
   <center>
@@ -489,13 +587,13 @@
 
 <hr/>
 手机上长按并复制下列链接或二维码分享本文章：<br/>
-https://github.com/gfw-breaker/banned-news3/blob/master/pages/p8/940956.md <br/>
-<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p8/940956.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p8/940956.md.png'/></a> <br/>
-原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/07/27/940956.html
+https://github.com/gfw-breaker/banned-news3/blob/master/pages/p8/954145.md <br/>
+<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p8/954145.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p8/954145.md.png'/></a> <br/>
+原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/11/30/954145.html
 
 
 ------------------------
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;|&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md) &nbsp;| [《九评共产党》](https://github.com/gfw-breaker/9ping.md/blob/master/README.md#九评之一评共产党是什么) | [《解体党文化》](https://github.com/gfw-breaker/jtdwh.md/blob/master/README.md) | [《共产主义的终极目的》](https://github.com/gfw-breaker/gczydzjmd.md/blob/master/README.md)
 
 
-<img src='http://gfw-breaker.win/banned-news3/pages/p8/940956.md' width='0px' height='0px'/>
+<img src='http://gfw-breaker.win/banned-news3/pages/p8/954145.md' width='0px' height='0px'/>
